--- a/Site_Honkai/locais/belobog.html
+++ b/Site_Honkai/locais/belobog.html
@@ -32,31 +32,31 @@ Quando a Guerra dos Deuses acabou, Jarilo-VI deu as boas-vindas a um longo perí
 
 Aqueles que sobreviveram ao Eternal Freeze foram reduzidos a refugiados que só podiam se esconder nos cantos, perdendo posteriormente toda a memória e registros do antigo nome de seu planeta, Jarilo. Para se proteger do frio, eles construíram uma cidade-santuário conhecida como Belobog, e assim conseguiram passar a tocha da civilização desta forma. Devido ao seu ambiente natural isolado e perigoso, Jarilo-VI perdeu contato com outros mundos após o surgimento do Câncer de Todos os Mundos.
     </p>
-          <div class="description">
-                                    <ul>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
-                                        </li>
-                                    </ul>
-                                </div>
-        </div>
-    </body>
-    </html>
+    <div class="description">
+        <ul>
+            <li>
+                <a href="../site.html#sobre" style="color: #ad861b;">Sobre</a>
+            </li>
+            <li>
+                <a href="../site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+            </li>
+            <li>
+                <a href="../site.html#progressao"style="color: #ad861b;">Progressão</a>
+            </li>
+            <li>
+                <a href="../site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+            </li>
+            <li>
+                <a href="../site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+            </li>
+            <li>
+                <a href="../site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+            </li>
+            <li>
+                <a href="../site.html#contato"style="color: #ad861b;">Contato</a>
+            </li>
+        </ul>
+    </div>
+</div>
+</body>
+</html>
