--- a/Site_Honkai/personagens/Bronya.html
+++ b/Site_Honkai/personagens/Bronya.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Bronya_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Bronya_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -196,39 +196,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">5</td>
+            <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">10</td>
+              <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">3</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">7</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">20</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">35</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -249,7 +249,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Skill_Windrider_Bullet.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Bronya/Skill_Windrider_Bullet.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Bala Windrider</td>
         <td>Causa Wind DMG igual a 50%–130% do ATK de Bronya a um único inimigo.</td>
@@ -258,7 +258,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Skill_Combat_Redeployment.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Bronya/Skill_Combat_Redeployment.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Redistribuição de combate</td>
         <td>Dissipa um debuff de um único aliado, permite que eles ajam imediatamente e aumenta seu DMG em 33%–82,5% por 1 turno(s).
@@ -268,7 +268,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Skill_The_Belobog_March.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Bronya/Skill_The_Belobog_March.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>A Marcha de Belobog</td>
         <td>Aumenta o ATK de todos os aliados em 33%–66% e aumenta seu CRIT DMG igual a 12%–18% do CRIT DMG de Bronya mais 12%–24% por 2 turno(s).</td>
@@ -279,7 +279,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Skill_Leading_the_Way.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Bronya/Skill_Leading_the_Way.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Abrindo o caminho</td>
         <td>Depois de usar seu ATK básico , a próxima ação de Bronya será Avançar em 15%–37,5% .</td>
@@ -288,7 +288,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Skill_Banner_of_Command.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Bronya/Skill_Banner_of_Command.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Bandeira de Comando</td>
         <td>Depois de usar a Técnica de Bronya, no início da próxima batalha, o ATK de todos os aliados aumenta em 15% por 2 turno(s).</td>
@@ -311,39 +311,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Eidolons/Eidolon_Hone_Your_Strength.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bronya/Eidolons/Eidolon_Hone_Your_Strength.webp" alt="Eidolon"></td>
           <td>Aprimore sua força</td>
           <td>1</td>
           <td>Ao usar Skill , há 50% de chance fixa de recuperar 1 Skill Point. Este efeito tem um cooldown de 1 turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Eidolons/Eidolon_Quick_March.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bronya/Eidolons/Eidolon_Quick_March.webp" alt="Eidolon"></td>
           <td>Marcha Rápida</td>
           <td>2</td>
           <td>Ao usar Skill, o SPD do aliado alvo aumenta em 30% após a ação, durando 1 turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Eidolons/Eidolon_Bombardment.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bronya/Eidolons/Eidolon_Bombardment.webp" alt="Eidolon"></td>
           <td>Bombardeamento</td>
           <td>3</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Eidolons/Eidolon_Take_by_Surprise.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bronya/Eidolons/Eidolon_Take_by_Surprise.webp" alt="Eidolon"></td>
           <td>Pego de Surpresa</td>
           <td>4</td>
           <td>Depois que um aliado que não seja Bronya usa ATK Básico em um inimigo com Fraqueza de Vento, Bronya imediatamente lança um ataque de acompanhamento no alvo, causando DMG de Vento igual a 80% do DMG de ATK Básico de Bronya. Este efeito só pode ser ativado 1 vez por turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Eidolons/Eidolon_Unstoppable.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bronya/Eidolons/Eidolon_Unstoppable.webp" alt="Eidolon"></td>
           <td>Imparável</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bronya/Eidolons/Eidolon_Piercing_Rainbow.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bronya/Eidolons/Eidolon_Piercing_Rainbow.webp" alt="Eidolon"></td>
           <td>Arco-íris Perfurante</td>
           <td>6</td>
           <td>A duração do efeito DMG Boost colocado pela Skill no alvo aliado aumenta em 1 turno(s).</td>
@@ -361,13 +361,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Itens/Item_Harmonic_Tune.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Ancestral_Hymn.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Itens/Item_Stellaris_Symphony.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -379,15 +379,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Itens/Item_Harmonic_Tune.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Ancestral_Hymn.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Itens/Item_Stellaris_Symphony.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
         </tr>
       </tbody>
     </table>
