--- a/Site_Honkai/personagens/arlan.html
+++ b/Site_Honkai/personagens/arlan.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Arlan_Splash_Art.png" alt="Imagem do Personagem">
+            <img class..="character-image" src="../Art_splash/Character_Arlan_Splash_Art.png" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -192,39 +192,39 @@
       <tbody>
         <tr>
           <td>0 → 1 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3.200</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3.200</td>
           <td></td>
-          <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
+          <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
         </tr>
         <tr>
           <td>1 → 2 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+          <td class="cost-cell"><img src="..//Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
+            <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
         </tr>
         <tr>
           <td>2 → 3 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+            <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
+            <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
         </tr>
         <tr>
           <td>3 → 4 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+            <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
+            <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
         </tr>
         <tr>
           <td>4 → 5 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,000</td>
+            <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
+            <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
         </tr>
         <tr>
           <td>5 → 6 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">248,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">248,000</td>
+            <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
+            <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
         </tr>
       </tbody>
     </table>
@@ -245,7 +245,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Lightning_Rush.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Arlan/Skill_Lightning_Rush.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Relâmpago</td>
         <td>Causa Lightning DMG igual a 50%–130% do ATK de Arlan para um único inimigo.</td>
@@ -254,7 +254,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Shackle_Breaker.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Arlan/Skill_Shackle_Breaker.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Quebra-grilhões</td>
         <td>Consome o HP de Arlan igual a 15% de seu HP máximo para lidar com Lightning DMG igual a 120%–300% do ATK de Arlan a um único inimigo. Se Arlan não tiver HP suficiente, seu HP será reduzido para 1 após usar sua Skill.</td>
@@ -263,7 +263,7 @@
         <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Frenzied_Punishment.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Arlan/Skill_Frenzied_Punishment.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Punição Frenética</td>
         <td>Causa Lightning DMG igual a 192%–348% do ATK de Arlan para um único inimigo e Lightning DMG igual a 96%–192% do ATK de Arlan para inimigos adjacentes a ele.</td>
@@ -274,7 +274,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Pain_and_Anger.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Arlan/Skill_Pain_and_Anger.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Dor e raiva</td>
         <td>Aumenta o DMG de Arlan para cada porcentagem de HP abaixo de seu HP máximo, até um máximo de 36% a 90% a mais de DMG.</td>
@@ -283,7 +283,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Swift_Harvest.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Arlan/Skill_Swift_Harvest.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Colheita rápida</td>
         <td>Imediatamente ataca o inimigo. Depois de entrar na batalha, causa Lightning DMG igual a 80% do ATK de Arlan para todos os inimigos.</td>
@@ -306,39 +306,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_To_the_Bitter_End.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Arlan/Eidolons/Eidolon_To_the_Bitter_End.webp" alt="Eidolon"></td>
           <td>Para o amargo fim</td>
           <td>1</td>
           <td>Quando o HP é menor ou igual a 50% do Max HP, aumenta o DMG da Skill em 10%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Breaking_Free.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Arlan/Eidolons/Eidolon_Breaking_Free.webp" alt="Eidolon"></td>
           <td>Libertando-se</td>
           <td>2</td>
           <td>Usar Skill ou Ultimate remove 1 debuff de si mesmo.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Power_Through.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Arlan/Eidolons/Eidolon_Power_Through.webp" alt="Eidolon"></td>
           <td>Através do poder</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Turn_the_Tables.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Arlan/Eidolons/Eidolon_Turn_the_Tables.webp" alt="Eidolon"></td>
           <td>Vire as mesas</td>
           <td>4</td>
           <td>Quando atingido por um golpe mortal após entrar na batalha, em vez de ser derrubado, Arlan restaura imediatamente seu HP para 25% de seu HP máximo. Este efeito é removido automaticamente após ser acionado uma vez ou após 2 turno(s) decorridos.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Hammer_and_Tongs.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Arlan/Eidolons/Eidolon_Hammer_and_Tongs.webp" alt="Eidolon"></td>
           <td>Martelo e tenazes</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Self-Sacrifice.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Arlan/Eidolons/Eidolon_Self-Sacrifice.webp" alt="Eidolon"></td>
           <td>Auto-sacrifício</td>
           <td>6</td>
           <td>Quando o HP cai para 50% ou menos, o Ultimate causa 20% a mais de DMG. O multiplicador DMG de DMG tomado pelo inimigo alvo agora se aplica aos inimigos adjacentes também.</td>
@@ -356,13 +356,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Lifeless_Blade.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Worldbreaker_Blade.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -374,15 +374,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Destroyer.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Lifeless_Blade.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Itens/Item_Worldbreaker_Blade.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Itens/Destroyer.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
