--- a/Site_Honkai/personagens/asta.html
+++ b/Site_Honkai/personagens/asta.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Asta_Splash_Art.png.webp" alt="Imagem do Personagem">
+            <img class..="character-image" src="../Art_splash/Character_Asta_Splash_Art.png.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -192,39 +192,39 @@
       <tbody>
         <tr>
           <td>0 → 1 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3.200</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3.200</td>
           <td></td>
-          <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">4</td>
+          <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">4</td>
         </tr>
         <tr>
           <td>1 → 2 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
             <td></td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">8</td>
+            <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">8</td>
         </tr>
         <tr>
           <td>2 → 3 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">2</td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">5</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+            <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">2</td>
+            <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">5</td>
         </tr>
         <tr>
           <td>3 → 4 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">5</td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">8</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+            <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">5</td>
+            <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">8</td>
         </tr>
         <tr>
           <td>4 → 5 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">15</td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">5</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,000</td>
+            <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">15</td>
+            <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">5</td>
         </tr>
         <tr>
           <td>5 → 6 ✦</td>
-          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">248,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">28</td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">7</td>
+          <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">248,000</td>
+            <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">28</td>
+            <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">7</td>
         </tr>
       </tbody>
     </table>
@@ -245,7 +245,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Spectrum_Beam.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Asta/Skill_Spectrum_Beam.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Feixe de Espectro</td>
         <td>Causa Fire DMG igual a 50%–130% do ATK de Asta para um único inimigo.</td>
@@ -254,7 +254,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Meteor_Storm.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Asta/Skill_Meteor_Storm.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Tempestade de Meteoros</td>
         <td>Causa Fire DMG igual a 25%–62,5% do ATK de Asta a um único inimigo e ainda mais DMG por 4 vezes extras, com cada vez causando Fire DMG igual a 25%–62,5% do ATK de Asta a um inimigo aleatório.</td>
@@ -265,7 +265,7 @@
           15 (Acertos Subseqüentes)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Astral_Blessing.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Asta/Skill_Astral_Blessing.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Bênção Astral</td>
         <td>Aumenta o SPD de todos os aliados em 36–57 por 2 turno(s).</td>
@@ -276,7 +276,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Astrometry.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Asta/Skill_Astrometry.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Astrometria</td>
         <td>Ganha 1 pilha de Carregamento para cada inimigo diferente atingido por Asta, mais uma pilha extra se o inimigo atingido tiver Fraqueza de Fogo.
@@ -287,7 +287,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Miracle_Flash.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Asta/Skill_Miracle_Flash.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>
           Flash Milagroso</td>
@@ -311,39 +311,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Star_Sings_Sans_Verses_or_Vocals.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Asta/Eidolons/Eidolon_Star_Sings_Sans_Verses_or_Vocals.webp" alt="Eidolon"></td>
           <td>Estrela Canta Sem Versos ou Vocais</td>
           <td>1</td>
           <td>Ao usar Skill, causa DMG por 1 vez extra a um inimigo aleatório.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Moon_Speaks_in_Wax_and_Wane.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Asta/Eidolons/Eidolon_Moon_Speaks_in_Wax_and_Wane.webp" alt="Eidolon"></td>
           <td>A Lua Fala em Crescente e Minguante</td>
           <td>2</td>
           <td>Depois de usar seu Ultimate, as pilhas de carregamento de Asta não serão reduzidas no próximo turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Meteor_Showers_for_Wish_and_Want.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Asta/Eidolons/Eidolon_Meteor_Showers_for_Wish_and_Want.webp" alt="Eidolon"></td>
           <td>Chuvas de meteoros para desejo e desejo</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Aurora_Basks_in_Beauty_and_Bliss.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Asta/Eidolons/Eidolon_Aurora_Basks_in_Beauty_and_Bliss.webp" alt="Eidolon"></td>
           <td>Aurora se deleita em beleza e felicidade</td>
           <td>4</td>
           <td>A taxa de regeneração de energia de Asta aumenta em 15% quando ela tem 2 ou mais pilhas de carregamento.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Nebula_Secludes_in_Cold_Cosmos.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Asta/Eidolons/Eidolon_Nebula_Secludes_in_Cold_Cosmos.webp" alt="Eidolon"></td>
           <td>Nebulosa se isola no cosmos frio</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Galaxy_Dreams_in_Calm_and_Comfort.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Asta/Eidolons/Eidolon_Galaxy_Dreams_in_Calm_and_Comfort.webp" alt="Eidolon"></td>
           <td>
             Sonhos da Galáxia em calma e conforto</td>
           <td>6</td>
@@ -362,13 +362,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Ancestral_Hymn.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Stellaris_Symphony.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -380,15 +380,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Destroyer.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Ancestral_Hymn.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Itens/Item_Stellaris_Symphony.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Itens/Destroyer.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
