--- a/Site_Honkai/personagens/bailu.html
+++ b/Site_Honkai/personagens/bailu.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Bailu_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Bailu_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -198,39 +198,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">5</td>
+            <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">10</td>
+              <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">3</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">7</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">20</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">35</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -251,7 +251,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Skill_Diagnostic_Kick.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Bailu/Skill_Diagnostic_Kick.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Pontapé de diagnóstico</td>
         <td>Causa Lightning DMG igual a 50%–130% do ATK de Bailu para um único inimigo.</td>
@@ -260,7 +260,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Skill_Singing_Among_Clouds.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Bailu/Skill_Singing_Among_Clouds.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Cantando entre nuvens</td>
         <td>Cura um único aliado em 7,8%–13,65% do HP máximo de Bailu mais 78–399,75 . Bailu então cura aliados aleatórios 2 vezes. Após cada cura, o HP restaurado da próxima cura é reduzido em 15%.</td>
@@ -269,7 +269,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Skill_Felicitous_Thunderleap.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Bailu/Skill_Felicitous_Thunderleap.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Abençoado Trovão</td>
         <td>Cura todos os aliados em 9%–15,75% do HP máximo de Bailu mais 90–461,25 . Bailu aplica Invigoration a aliados que ainda não estão Invigorated. Para aqueles já revigorados, Bailu estende a duração de seu revigoramento em 1 turno. O efeito de Revigoração pode durar 2 turno(s). Este efeito não pode se acumular.</td>
@@ -280,7 +280,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Skill_Gourdful_of_Elixir.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Bailu/Skill_Gourdful_of_Elixir.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Cabaça de Elixir</td>
         <td>Depois que um aliado com Invigoration é atingido, restaura o HP do aliado em 3,6%–6,3% do HP máximo de Bailu mais 36–184,5 . Este efeito pode desencadear 2 vez(es). Quando um aliado recebe um golpe mortal, ele não será derrubado . Bailu cura imediatamente o aliado em 12%–21% do HP máximo de Bailu mais 120–615 HP. Este efeito pode ser ativado 1 vez por batalha.</td>
@@ -289,7 +289,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Skill_Saunter_in_the_Rain.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Bailu/Skill_Saunter_in_the_Rain.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Passear na chuva</td>
         <td>Depois de usar a Técnica, no início da próxima batalha, todos os aliados recebem Invigoration por 2 turno(s).</td>
@@ -312,39 +312,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Eidolons/Eidolon_Ambrosial_Aqua.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bailu/Eidolons/Eidolon_Ambrosial_Aqua.webp" alt="Eidolon"></td>
           <td>Água Ambrosial</td>
           <td>1</td>
           <td>Se o HP atual do aliado alvo for igual ao HP máximo quando o revigoramento terminar, regenera 8 energias extras para este alvo.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Eidolons/Eidolon_Sylphic_Slumber.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bailu/Eidolons/Eidolon_Sylphic_Slumber.webp" alt="Eidolon"></td>
           <td>Sono Sílfico</td>
           <td>2</td>
           <td>Depois de usar seu Ultimate, a cura de saída de Bailu aumenta em 15% adicionais por 2 turnos.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Eidolons/Eidolon_Omniscient_Opulence.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bailu/Eidolons/Eidolon_Omniscient_Opulence.webp" alt="Eidolon"></td>
           <td>Opulência Onisciente</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Eidolons/Eidolon_Evil_Excision.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bailu/Eidolons/Eidolon_Evil_Excision.webp" alt="Eidolon"></td>
           <td>Excisão Maligna</td>
           <td>4</td>
           <td>Cada cura fornecida pela Habilidade faz com que o destinatário cause 10% a mais de DMG por 2 turno(s). Este efeito pode acumular até 3 vez(es).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Eidolons/Eidolon_Waning_Worries.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bailu/Eidolons/Eidolon_Waning_Worries.webp" alt="Eidolon"></td>
           <td>Preocupações Minguantes</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Bailu/Eidolons/Eidolon_Drooling_Drop_of_Draconic_Divinity.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Bailu/Eidolons/Eidolon_Drooling_Drop_of_Draconic_Divinity.webp" alt="Eidolon"></td>
           <td>Gota Babando da Divindade Dracônica</td>
           <td>6</td>
           <td>Bailu pode curar aliados que receberam um golpe mortal mais de 1 vez em uma única batalha.</td>
@@ -362,13 +362,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Seed_of_Abundance.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Sprout_of_Life.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Sprout_of_Life.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Seed_of_Abundance.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Sprout_of_Life.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Sprout_of_Life.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -380,15 +380,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Seed_of_Abundance.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Sprout_of_Life.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Flower_of_Eternity.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Seed_of_Abundance.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Sprout_of_Life.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Flower_of_Eternity.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
         </tr>
       </tbody>
     </table>
