--- a/Site_Honkai/personagens/clara.html
+++ b/Site_Honkai/personagens/clara.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Clara_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Clara_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -196,39 +196,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">5</td>
+            <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">10</td>
+              <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">3</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">7</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">20</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">35</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -249,7 +249,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_I_Want_to_Help.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Clara/Skill_I_Want_to_Help.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Eu quero ajudar</td>
         <td>Causa DANO Físico igual a 50%–130% do ATK de Clara a um único inimigo.</td>
@@ -258,7 +258,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_Svarog_Watches_Over_You.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Clara/Skill_Svarog_Watches_Over_You.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Svarog cuida de você</td>
         <td>Causa DANO Físico igual a 60%–150% do ATK de Clara a todos os inimigos e, adicionalmente, causa DANO Físico igual a 60%–150% do ATK de Clara aos inimigos marcados por Svarog com uma Marca de Contra-ataque.
@@ -268,7 +268,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_Promise_Not_Command.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Clara/Skill_Promise_Not_Command.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Prometa, não mande</td>
         <td>Depois que Clara usa o Ultimate, o DMG causado a ela é reduzido em 15% a 30% a mais e ela aumenta muito as chances de ser atacada por inimigos por 2 turnos.
@@ -280,7 +280,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_Because_We_are_Family (1).webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Clara/Skill_Because_We_are_Family (1).webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Porque Somos Família</td>
         <td>Sob a proteção de Svarog, o DMG tomado por Clara quando atingido por ataques inimigos é reduzido em 10%. Svarog marcará os inimigos que atacarem Clara com sua Marca de Contra-ataque e retaliará com um Contra-ataque , causando DANO Físico igual a 80%–200% do ATK de Clara.</td>
@@ -289,7 +289,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_A_Small_Price_for_Victory.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Clara/Skill_A_Small_Price_for_Victory.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Um pequeno preço pela vitória</td>
         <td>Imediatamente ataca o inimigo. Ao entrar na batalha, a chance de Clara ser atacada por inimigos aumenta por 2 turno(s).</td>
@@ -312,19 +312,19 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_A_Tall_Figure.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Clara/Eidolons/Eidolon_A_Tall_Figure.webp" alt="Eidolon"></td>
           <td>Uma figura alta</td>
           <td>1</td>
           <td>Usar Skill não removerá Marks of Counter do inimigo.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_A_Tight_Embrace.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Clara/Eidolons/Eidolon_A_Tight_Embrace.webp" alt="Eidolon"></td>
           <td>Um Abraço Apertado</td>
           <td>2</td>
           <td>Depois de usar o Ultimate, o ATK aumenta em 30% por 2 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_Cold_Steel_Armor.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Clara/Eidolons/Eidolon_Cold_Steel_Armor.webp" alt="Eidolon"></td>
           <td>Armadura de aço frio</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
@@ -332,20 +332,20 @@
             </td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_Family_Warmth.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Clara/Eidolons/Eidolon_Family_Warmth.webp" alt="Eidolon"></td>
           <td>calor da família</td>
           <td>4</td>
           <td>Depois que Clara é atingida, o DMG recebido por Clara é reduzido em 30%. Este efeito dura até o início de seu próximo turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_A_Small_Promise.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Clara/Eidolons/Eidolon_A_Small_Promise.webp" alt="Eidolon"></td>
           <td>Uma Pequena Promessa</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_Long_Company.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Clara/Eidolons/Eidolon_Long_Company.webp" alt="Eidolon"></td>
           <td>Compania Duradoura</td>
           <td>6</td>
           <td>Depois que outros aliados são atingidos, Svarog também tem 50% de chance fixa de acionar um Contra-ataque no atacante e marcá-lo com uma Marca de Contra-ataque. Ao usar o Ultimate, o número de contadores aprimorados aumenta em 1.</td>
@@ -363,13 +363,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade (1).webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Itens/Item_Shattered_Blade.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Lifeless_Blade (1).webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Itens/Item_Worldbreaker_Blade.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -381,15 +381,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade (1).webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Itens/Item_Shattered_Blade.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Lifeless_Blade (1).webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Itens/Item_Worldbreaker_Blade.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
         </tr>
       </tbody>
     </table>
