--- a/Site_Honkai/personagens/cocolia.html
+++ b/Site_Honkai/personagens/cocolia.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="character-menu">
-        <img src="/Site_Honkai/Art_splash/NPC_Cocolia.webp" alt="Imagem do Personagem">
+        <img src="../Art_splash/NPC_Cocolia.webp" alt="Imagem do Personagem">
         <h2>Nome do Personagem:</h2>
         <p>Cocolia Rand</p>
         <h2>Suprema Guardiã de Belobog</h2>
