--- a/Site_Honkai/personagens/dan_heng.html
+++ b/Site_Honkai/personagens/dan_heng.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Dan_Heng_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Dan_Heng_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -195,39 +195,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -248,7 +248,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Cloudlancer_Art_North_Wind.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Dan Heng/Skill_Cloudlancer_Art_North_Wind.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Arte Cloudlancer: Vento Norte</td>
         <td>Causa Wind DMG igual a 50%–130% do ATK de Dan Heng a um único inimigo.</td>
@@ -257,7 +257,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Cloudlancer_Art_Torrent.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Dan Heng/Skill_Cloudlancer_Art_Torrent.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Arte Cloudlancer: Torrent</td>
         <td>Causa Wind DMG igual a 130%–325% do ATK de Dan Heng a um único inimigo.
@@ -267,7 +267,7 @@
         <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Ethereal_Dream.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Dan Heng/Skill_Ethereal_Dream.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Sonho Etéreo</td>
         <td>Causa Wind DMG igual a 240%–480% do ATK de Dan Heng a um único inimigo. Se o inimigo for retardado, o multiplicador DMG do Ultimate aumenta em 72%–144% .</td>
@@ -278,7 +278,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Superiority_of_Reach.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Dan Heng/Skill_Superiority_of_Reach.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Superioridade de Alcance</td>
         <td>Quando Dan Heng é o alvo da habilidade de um aliado, o Wind RES PEN de seu próximo ataque aumenta em 18%–45% . Este efeito pode ser acionado novamente após 2 turno(s).</td>
@@ -287,7 +287,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Splitting_Spearhead.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Dan Heng/Skill_Splitting_Spearhead.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Ponta de Lança Dividida</td>
         <td>Depois que Dan Heng usa sua técnica, seu ATK aumenta em 40% no início da próxima batalha por 3 turno(s).</td>
@@ -310,39 +310,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_The_Higher_You_Fly_the_Harder_You_Fall.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Dan Heng/Eidolons/Eidolon_The_Higher_You_Fly_the_Harder_You_Fall.webp" alt="Eidolon"></td>
           <td>Quanto mais alto você voa, maior é a queda</td>
           <td>1</td>
           <td>Quando a porcentagem de HP atual do inimigo alvo é maior ou igual a 50%, a taxa CRIT aumenta em 12%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_Quell_the_Venom_.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Dan Heng/Eidolons/Eidolon_Quell_the_Venom_.webp" alt="Eidolon"></td>
           <td>Suprima o Venom Octet, Extinga o Vice O'Flame</td>
           <td>2</td>
           <td>Reduz o cooldown do talento em 1 turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_Seen_and_Unseen.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Dan Heng/Eidolons/Eidolon_Seen_and_Unseen.webp" alt="Eidolon"></td>
           <td>Visto e não visto</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_Roaring_Dragon_and_Soaring_Sun.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Dan Heng/Eidolons/Eidolon_Roaring_Dragon_and_Soaring_Sun.webp" alt="Eidolon"></td>
           <td>Dragão Rugindo e Sol Nascente</td>
           <td>4</td>
           <td>Quando Dan Heng usa seu Ultimate para derrotar um inimigo, sua próxima ação é Avançar em 100%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_A_Drop_of_Rain_Feeds_a_Torrent.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Dan Heng/Eidolons/Eidolon_A_Drop_of_Rain_Feeds_a_Torrent.webp" alt="Eidolon"></td>
           <td>Uma gota de chuva alimenta uma torrente</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_The_Troubled_Soul_Lies_in_Wait.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Dan Heng/Eidolons/Eidolon_The_Troubled_Soul_Lies_in_Wait.webp" alt="Eidolon"></td>
           <td>A alma perturbada está à espreita</td>
           <td>6</td>
           <td>O estado lento desencadeado por Skill reduz o SPD do inimigo em 8%.</td>
@@ -360,13 +360,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -378,15 +378,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
