--- a/Site_Honkai/personagens/dan_shu.html
+++ b/Site_Honkai/personagens/dan_shu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="character-menu">
-        <img src="/Site_Honkai/Art_splash/NPC_Dan_Shu.webp" alt="Imagem do Personagem">
+        <img src="../Art_splash/NPC_Dan_Shu.webp" alt="Imagem do Personagem">
         <h2>Nome do Personagem:</h2>
         <p>Dan Shu</p>
         <h2></h2>
