--- a/Site_Honkai/personagens/herta.html
+++ b/Site_Honkai/personagens/herta.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Herta_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Herta_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -195,39 +195,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -248,7 +248,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Skill_What_Are_You_Looking_At.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Herta/Skill_What_Are_You_Looking_At.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>O que você está olhando?</td>
         <td>Causa Ice DMG igual a 50%–130% do ATK de Herta a um único inimigo.
@@ -258,7 +258,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Skill_One-Time_Offer.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Herta/Skill_One-Time_Offer.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Oferta única</td>
         <td>Causa Ice DMG igual a 50%–125% do ATK de Herta para todos os inimigos. Se a porcentagem de HP do inimigo for 50% ou mais, o DMG causado a este alvo aumenta em 20%.</td>
@@ -267,7 +267,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Skill_It's_Magic_I_Added_Some_Magic.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Herta/Skill_It's_Magic_I_Added_Some_Magic.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>É mágica, eu adicionei um pouco de mágica</td>
         <td>Causa Ice DMG igual a 120%–240% do ATK de Herta a todos os inimigos.</td>
@@ -278,7 +278,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Skill_Fine_Do_It_Myself.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Herta/Skill_Fine_Do_It_Myself.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Tudo bem, vou fazer isso sozinha</td>
         <td>Quando o ataque de um aliado faz com que a porcentagem de HP de um inimigo caia para 50% ou menos, Herta lançará um ataque de acompanhamento , causando Ice DMG igual a 25%–47,5% do ATK de Herta a todos os inimigos.</td>
@@ -287,7 +287,7 @@
         <td>15</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Skill_It_Can_Still_Be_Optimized.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Herta/Skill_It_Can_Still_Be_Optimized.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Ainda pode ser otimizado</td>
         <td>Depois de usar sua técnica, o ATK de Herta aumenta em 40% por 3 turno(s) no início da próxima batalha.</td>
@@ -310,41 +310,41 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Eidolons/Eidolon_Kick_You_When_You_re_Down.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Herta/Eidolons/Eidolon_Kick_You_When_You_re_Down.webp" alt="Eidolon"></td>
           <td>
             Chutar você quando você está para baixo</td>
           <td>1</td>
           <td>Se a porcentagem de HP do inimigo estiver em 50% ou menos, o ATK básico de Herta causa DMG de gelo adicional igual a 40% do ATK de Herta.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Eidolons/Eidolon_Keep_the_Ball_Rolling.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Herta/Eidolons/Eidolon_Keep_the_Ball_Rolling.webp" alt="Eidolon"></td>
           <td>Mantenha a bola rolando</td>
           <td>2</td>
           <td>Toda vez que o talento é acionado, a taxa CRIT desse personagem aumenta em 3%. Este efeito pode acumular até 5 vez(es).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Eidolons/Eidolon_Thats_the_Kind_of_Girl_I_Am.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Herta/Eidolons/Eidolon_Thats_the_Kind_of_Girl_I_Am.webp" alt="Eidolon"></td>
           <td>Esse é o tipo de garota que eu sou</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Eidolons/Eidolon_Hit_Where_It_Hurts.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Herta/Eidolons/Eidolon_Hit_Where_It_Hurts.webp" alt="Eidolon"></td>
           <td>Bata onde dói</td>
           <td>4</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Eidolons/Eidolon_Cuss_Big_or_Cuss_Nothing.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Herta/Eidolons/Eidolon_Cuss_Big_or_Cuss_Nothing.webp" alt="Eidolon"></td>
           <td>Xingamento Grande ou Xingamento Nada</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Herta/Eidolons/Eidolon_No_One_Can_Betray_Me.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Herta/Eidolons/Eidolon_No_One_Can_Betray_Me.webp" alt="Eidolon"></td>
           <td>Ninguém Pode Me Trair</td>
           <td>6</td>
           <td>Depois de usar o Ultimate, o ATK deste personagem aumenta em 25% por 1 turno(s).</td>
@@ -362,13 +362,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -380,15 +380,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
