--- a/Site_Honkai/personagens/himeko.html
+++ b/Site_Honkai/personagens/himeko.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Himeko_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Himeko_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -197,39 +197,39 @@ Stellar Warp</td>
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">5</td>
+            <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">10</td>
+              <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">3</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">7</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">20</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">35</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -250,7 +250,7 @@ Stellar Warp</td>
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Skill_Sawblade_Tuning.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Himeko/Skill_Sawblade_Tuning.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Afinação da Serra</td>
         <td>Causa Fire DMG igual a 50%–130% do ATK de Himeko a um único inimigo.</td>
@@ -259,7 +259,7 @@ Stellar Warp</td>
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Skill_Molten_Detonation.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Himeko/Skill_Molten_Detonation.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Detonação Derretida</td>
         <td>Causa Fire DMG igual a 100%–250% do ATK de Himeko para um único inimigo e Fire DMG igual a 40%–100% do ATK de Himeko para inimigos adjacentes a ele.</td>
@@ -269,7 +269,7 @@ Stellar Warp</td>
             30 (Adjacente)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Skill_Heavenly_Flare.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Himeko/Skill_Heavenly_Flare.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Clarão Celestial</td>
         <td>Causa Fire DMG igual a 138%–276% do ATK de Himeko a todos os inimigos. Himeko regenera 5 energias extras para cada inimigo derrotado.</td>
@@ -279,7 +279,7 @@ Stellar Warp</td>
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Skill_Victory_Rush.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Himeko/Skill_Victory_Rush.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Corrida da Vitória</td>
         <td>Quando um inimigo é infligido com Weakness Break, Himeko ganha 1 ponto de Charge (máximo de 3 pontos).
@@ -290,7 +290,7 @@ Stellar Warp</td>
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Skill_Incomplete_Combustion.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Himeko/Skill_Incomplete_Combustion.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Combustão Incompleta</td>
         <td>Após usar a Técnica, cria uma dimensão que dura 15 segundo(s). Depois de entrar em batalha com os inimigos na dimensão, há 100% de chance base de aumentar o DMG de fogo recebido pelos inimigos em 10% por 2 turno(s). Apenas 1 dimensão criada por aliados pode existir ao mesmo tempo.</td>
@@ -313,39 +313,39 @@ Stellar Warp</td>
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Eidolons/Eidolon_Childhood.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Himeko/Eidolons/Eidolon_Childhood.webp" alt="Eidolon"></td>
           <td>Infância</td>
           <td>1</td>
           <td>Depois que "Victory Rush" é acionado, o SPD de Himeko aumenta em 20% por 2 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Eidolons/Eidolon_Convergence.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Himeko/Eidolons/Eidolon_Convergence.webp" alt="Eidolon"></td>
           <td>Convergência</td>
           <td>2</td>
           <td>Causa 15% mais DMG a inimigos cuja porcentagem de HP é 50% ou menos.<td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Eidolons/Eidolon_Poised.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Himeko/Eidolons/Eidolon_Poised.webp" alt="Eidolon"></td>
           <td>Equilibrado</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Eidolons/Eidolon_Dedication.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Himeko/Eidolons/Eidolon_Dedication.webp" alt="Eidolon"></td>
           <td>Dedicação</td>
           <td>4</td>
           <td>Quando a Habilidade de Himeko inflige Quebra de Fraqueza em um inimigo, ela ganha 1 ponto(s) extra(s) de Carga.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Eidolons/Eidolon_Aspiration.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Himeko/Eidolons/Eidolon_Aspiration.webp" alt="Eidolon"></td>
           <td>Aspiração</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Himeko/Eidolons/Eidolon_Trailblaze.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Himeko/Eidolons/Eidolon_Trailblaze.webp" alt="Eidolon"></td>
           <td>Desbravador!</td>
           <td>6</td>
           <td>Ultimate causa DMG 2 vezes extras, cada uma das quais causa Fire DMG igual a 40% do DMG original a um inimigo aleatório.</td>
@@ -363,13 +363,13 @@ Stellar Warp</td>
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -381,15 +381,15 @@ Stellar Warp</td>
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Destroyer.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Itens/Destroyer.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
         </tr>
       </tbody>
     </table>
