--- a/Site_Honkai/personagens/hook.html
+++ b/Site_Honkai/personagens/hook.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Hook_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Hook_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -194,39 +194,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Endotherm_Chitin.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -247,7 +247,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Skill_Hehe_Get_Burned.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Hook/Skill_Hehe_Get_Burned.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>HEHE! Não se queime!</td>
         <td>Causa Fire DMG igual a 50%–130% do ATK de Hook a um inimigo alvo.</td>
@@ -256,7 +256,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Skill_Hey.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Hook/Skill_Hey.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Ei! Lembra do Gancho?	</td>
         <td>Alvo Único: Causa DMG de Fogo igual a 120%–300% do ATK de Gancho a um único inimigo. Além disso, há uma chance básica de 100% de infligir Queimadura por 2 turno(s). Quando afetados por Burn, os inimigos receberão Fire DoT igual a 25%–81,25% do ATK de Hook no início de cada turno. <br>
@@ -267,7 +267,7 @@
         <td>Geração: 30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Skill_Boom.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Hook/Skill_Boom.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Estrondo! Aqui vem o fogo!</td>
         <td>Causa Fire DMG igual a 240%–480% do ATK de Hook para um único inimigo. Depois de usar o Ultimate, a próxima Skill a ser usada é Enhanced, que causa DMG a um único inimigo e inimigos adjacentes a ele.</td>
@@ -278,7 +278,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Skill_Ha.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Hook/Skill_Ha.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Ha! Óleo para as chamas!</td>
         <td>Ao atacar um alvo afligido com Burn, causa dano de fogo adicional igual a 50%–125% do ATK de Hook e regenera 5 de energia extra.</td>
@@ -287,7 +287,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Skill_Ack.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Hook/Skill_Ack.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Ack! Olha essa bagunça!</td>
         <td>Imediatamente ataca o inimigo. Ao entrar na batalha, Hook causa Fire DMG igual a 50% de seu ATK a um inimigo aleatório. Além disso, há uma chance básica de 100% de infligir Queimadura em todos os inimigos por 3 turno(s). Quando atingidos por Burn, os inimigos receberão Fire DoT igual a 50% do ATK de Hook no início de cada turno.</td>
@@ -310,39 +310,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Eidolons/Eidolon_Early_to_Bed_Early_to_Rise.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Hook/Eidolons/Eidolon_Early_to_Bed_Early_to_Rise.webp" alt="Eidolon"></td>
           <td>Cedo para dormir, cedo para levantar</td>
           <td>1</td>
           <td>Habilidade aprimorada causa DMG aumentado em 20%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Eidolons/Eidolon_Happy_Tummy_Happy_Body.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Hook/Eidolons/Eidolon_Happy_Tummy_Happy_Body.webp" alt="Eidolon"></td>
           <td>Barriga feliz, corpo feliz</td>
           <td>2</td>
           <td>Estende a duração da Queimadura causada pela Habilidade em 1 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Eidolons/Eidolon_Don_Nothings_Icky.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Hook/Eidolons/Eidolon_Don_Nothings_Icky.webp" alt="Eidolon"></td>
           <td>Não seja exigente, nada é nojento</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Eidolons/Eidolon_Its_Okay_to_Not_Know.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Hook/Eidolons/Eidolon_Its_Okay_to_Not_Know.webp" alt="Eidolon"></td>
           <td>Tudo bem não saber</td>
           <td>4</td>
           <td>Quando o talento é acionado, há 100% de chance base de queimar inimigos adjacentes ao inimigo alvo, equivalente à habilidade.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Eidolons/Eidolon_Let_the_Moles_Deeds_Be_Known.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Hook/Eidolons/Eidolon_Let_the_Moles_Deeds_Be_Known.webp" alt="Eidolon"></td>
           <td>Deixe as ações das toupeiras serem conhecidas</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Hook/Eidolons/Eidolon_Always_Ready_to_Punch_and_Kick.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Hook/Eidolons/Eidolon_Always_Ready_to_Punch_and_Kick.webp" alt="Eidolon"></td>
           <td>Sempre pronto para socar e chutar</td>
           <td>6</td>
           <td>Gancho causa 20% a mais de DMG a inimigos afetados por Queimadura.</td>
@@ -360,13 +360,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Lifeless_Blade.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Worldbreaker_Blade.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -378,15 +378,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Lifeless_Blade.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Itens/Item_Worldbreaker_Blade.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
