--- a/Site_Honkai/personagens/jing_yuan.html
+++ b/Site_Honkai/personagens/jing_yuan.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Jing_Yuan_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Jing_Yuan_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -196,39 +196,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Material A">5</td>
+            <td><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Material A">10</td>
+              <td><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">3</td>
+              <td><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">7</td>
+              <td><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">20</td>
+              <td><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Shape_Shifters_Lightning_Staff.webp" alt="Material A">35</td>
+              <td><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -249,7 +249,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Skill_Glistening_Light.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Jing Yuan/Skill_Glistening_Light.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Luz Brilhante</td>
         <td>Jing Yuan causa Lightning DMG igual a 50%–130% de seu ATK para um único inimigo.</td>
@@ -258,7 +258,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Skill_Rifting_Zenith.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Jing Yuan/Skill_Rifting_Zenith.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Rifting Zenith</td>
         <td>Causa Lightning DMG igual a 50%–125% do ATK de Jing Yuan para todos os inimigos e aumenta os Hits Per Action do Lightning-Lord em 2 para o próximo turno.</td>
@@ -267,7 +267,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Skill_Lightbringer.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Jing Yuan/Skill_Lightbringer.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Portador da Luz	</td>
         <td>Causa Lightning DMG igual a 120%–240% do ATK de Jing Yuan a todos os inimigos e aumenta os Hits Per Action do Lightning-Lord em 3 para o próximo turno.</td>
@@ -278,7 +278,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Skill_Prana_Extirpated.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Jing Yuan/Skill_Prana_Extirpated.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Prana Extirpado</td>
         <td>Invoca Lightning-Lord no início da batalha. Lightning-Lord tem 60 SPD base e 3 hits básicos por ação. Quando o Lightning-Lord entra em ação, seus acertos são considerados como ataques de acompanhamento , com cada acerto causando Lightning DMG igual a 33%–82,5% do ATK de Jing Yuan para um único inimigo aleatório, e os inimigos adjacentes a ele também recebem Lightning DMG igual a 25% do DMG causado ao inimigo alvo.
@@ -291,7 +291,7 @@
             0 (Adjacente)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Skill_Spirit_Invocation.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Jing Yuan/Skill_Spirit_Invocation.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Invocação do Espírito</td>
         <td>Depois que a Técnica é usada, os Ataques por Ação do Senhor do Relâmpago no primeiro turno aumentam em 3 no início da próxima batalha.</td>
@@ -314,39 +314,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Eidolons/Eidolon_Slash_Seas_Split.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Jing Yuan/Eidolons/Eidolon_Slash_Seas_Split.webp" alt="Eidolon"></td>
           <td>Corte, Divisão dos Mares</td>
           <td>1</td>
           <td>Quando o Lightning-Lord ataca, o multiplicador de DMG nos inimigos adjacentes ao inimigo alvo aumenta em uma quantidade extra igual a 25% do multiplicador de DMG contra o inimigo alvo.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Eidolons/Eidolon_Swing,_Skies_Squashed.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Jing Yuan/Eidolons/Eidolon_Swing,_Skies_Squashed.webp" alt="Eidolon"></td>
           <td>Balanço, Céus Esmagados</td>
           <td>2</td>
           <td>Depois que Lightning-Lord entra em ação, o DMG causado pelo ATK Básico, Habilidade e Ultimate de Jing Yuan aumenta em 20% por 2 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Eidolons/Eidolon_Strike_Suns_Subdued.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Jing Yuan/Eidolons/Eidolon_Strike_Suns_Subdued.webp" alt="Eidolon"></td>
           <td>Strike, Sóis Subjugados</td>
           <td>3</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Eidolons/Eidolon_SpinStars_Sieged.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Jing Yuan/Eidolons/Eidolon_SpinStars_Sieged.webp" alt="Eidolon"></td>
           <td>Girar, Estrelas Cercadas</td>
           <td>4</td>
           <td>Para cada golpe executado pelo Lightning-Lord quando ele entra em ação, Jing Yuan regenera 2 de energia.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Eidolons/Eidolon_Stride_Spoils_Seized.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Jing Yuan/Eidolons/Eidolon_Stride_Spoils_Seized.webp" alt="Eidolon"></td>
           <td>Stride, Espólios Apreendidos</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Jing Yuan/Eidolons/Eidolon_Sweep_Souls_Slain.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Jing Yuan/Eidolons/Eidolon_Sweep_Souls_Slain.webp" alt="Eidolon"></td>
           <td>Varredura, Almas Mortas</td>
           <td>6</td>
           <td>Cada golpe realizado pelo Lightning-Lord quando ele entra em ação tornará o alvo inimigo Vulnerável.
@@ -365,13 +365,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -383,15 +383,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
