--- a/Site_Honkai/personagens/marco.html
+++ b/Site_Honkai/personagens/marco.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_March_7th_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_March_7th_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -196,39 +196,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -249,7 +249,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Skill_Frigid_Cold_Arrow.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/7 de Março/Skill_Frigid_Cold_Arrow.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Flecha Frígida e Fria</td>
         <td>Causa Ice DMG igual a 50%–130% do ATK de 7 de março a um único inimigo.</td>
@@ -258,7 +258,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Skill_The_Power_of_Cuteness.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/7 de Março/Skill_The_Power_of_Cuteness.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>O Poder da Fofura</td>
         <td>Fornece a um único aliado um escudo que pode absorver DMG igual a 38%–66,5% da DEF de 7 de março mais 190–973,75 por 3 turno(s).
@@ -268,7 +268,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Skill_Glacial_Cascade.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/7 de Março/Skill_Glacial_Cascade.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Cascata Glacial</td>
         <td>Causa DMG de gelo igual a 90%–180% do ATK de 7 de março a todos os inimigos. Inimigos atingidos têm 50% de chance base de serem Congelados por 1 turno(s).
@@ -280,7 +280,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Skill_Girl_Power.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/7 de Março/Skill_Girl_Power.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Poder Feminino</td>
         <td>Depois que um aliado blindado é atacado por um inimigo, 7 de março imediatamente contra-ataca , causando DMG de gelo igual a 50%–125% de seu ATK. Este efeito pode ser acionado 2 vez(es) a cada turno.</td>
@@ -289,7 +289,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Skill_Freezing_Beauty.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/7 de Março/Skill_Freezing_Beauty.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Beleza Congelante</td>
         <td>Imediatamente ataca o inimigo. Depois de entrar na batalha, há 100% de chance básica de Congelar um inimigo aleatório por 1 turno(s).
@@ -313,39 +313,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Eidolons/Eidolon_Memory_of_You.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/7 de Março/Eidolons/Eidolon_Memory_of_You.webp" alt="Eidolon"></td>
           <td>Memória de você</td>
           <td>1</td>
           <td>Toda vez que o Ultimate de 7 de março congela um alvo, ela regenera 6 de energia.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Eidolons/Eidolon_Memory_of_It.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/7 de Março/Eidolons/Eidolon_Memory_of_It.webp" alt="Eidolon"></td>
           <td>Memória disso</td>
           <td>2</td>
           <td>Ao entrar na batalha, concede um Escudo igual a 24% da DEF de 7 de março mais 320 ao aliado com menor porcentagem de HP, com duração de 3 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Eidolons/Eidolon_Memory_of_Everything.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/7 de Março/Eidolons/Eidolon_Memory_of_Everything.webp" alt="Eidolon"></td>
           <td>Memória de tudo</td>
           <td>3</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Eidolons/Eidolon_Never_Forfeit_Again.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/7 de Março/Eidolons/Eidolon_Never_Forfeit_Again.webp" alt="Eidolon"></td>
           <td>Nunca mais perca</td>
           <td>4</td>
           <td>O efeito do Contador de Talentos pode ser acionado mais 1 vez em cada turno. O DMG causado pelo Counter aumenta em um valor igual a 30% da DEF de 7 de março.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Eidolons/Eidolon_Never_Forget_Again.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/7 de Março/Eidolons/Eidolon_Never_Forget_Again.webp" alt="Eidolon"></td>
           <td>Nunca mais esqueça</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/7 de Março/Eidolons/Eidolon_Just_Like_This_Always....webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/7 de Março/Eidolons/Eidolon_Just_Like_This_Always....webp" alt="Eidolon"></td>
           <td>Assim, Sempre...</td>
           <td>6</td>
           <td>Aliados sob a proteção do Escudo concedido pela Habilidade restauram HP igual a 4% de seu HP Máximo mais 106 no início de cada turno.</td>
@@ -363,13 +363,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Oath_of_Steel.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Oath_of_Steel.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -381,15 +381,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Oath_of_Steel.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Oath_of_Steel.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
