--- a/Site_Honkai/personagens/qingque.html
+++ b/Site_Honkai/personagens/qingque.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Qingque_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Qingque_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -195,39 +195,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -248,16 +248,16 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Skill_Flower_Pick.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Qingque/Skill_Flower_Pick.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Colheita de Flores</td>
-        <td>Joga 1 ladrilho de jade do naipe com o menor número de ladrilhos na mão para causar Quantum DMG igual a 50%–130% do ATK de Qingque a um único inimigo.</td>
+        <td>Joga 1 peça de jade do naipe com o menor número de peças na mão para causar Quantum DMG igual a 50%–130% do ATK de Qingque a um único inimigo.</td>
         <td>Alvo único</td>
         <td>Geração: 20</td>
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Skill_Cherry_on_Top.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Qingque/Skill_Cherry_on_Top.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Cereja no Topo!</td>
         <td>Causa Quantum DMG igual a 120%–312% do ATK de Qingque a um único inimigo e causa Quantum DMG igual a 50%–130% do ATK de Qingque aos inimigos adjacentes a ele.
@@ -269,19 +269,19 @@
             30 (Adjacente)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Skill_A_Scoop_of_Moon.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Qingque/Skill_A_Scoop_of_Moon.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Uma Colher de Lua</td>
-        <td>Imediatamente compra 2 ladrilhos de jade e aumenta DMG em 14%–35% até o final do turno atual. Este efeito pode acumular até 4 vezes. O turno não terminará depois que esta Habilidade for usada.</td>
+        <td>Imediatamente compra 2 peças de jade e aumenta DMG em 14%–35% até o final do turno atual. Este efeito pode acumular até 4 vezes. O turno não terminará depois que esta Habilidade for usada.</td>
         <td>Melhorar</td>
         <td>Geração: 30</td>
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Skill_A_Quartet.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Qingque/Skill_A_Quartet.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Um Quarteto? Woo-hoo!</td>
-        <td>Distribui Quantum DMG igual a 120%–240% do ATK de Qingque a todos os inimigos e obtém 4 blocos de jade do mesmo naipe.</td>
+        <td>Distribui Quantum DMG igual a 120%–240% do ATK de Qingque a todos os inimigos e obtém 4 peças de jade do mesmo naipe.</td>
         <td>AoE</td>
         <td>Custo: 140
             Geração: 5</td>
@@ -289,10 +289,10 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Skill_Celestial_Jade.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Qingque/Skill_Celestial_Jade.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Jade Celestial</td>
-        <td>Quando o turno de um aliado começa, Qingque compra aleatoriamente 1 ladrilho de 3 naipes diferentes e pode conter até 4 ladrilhos ao mesmo tempo.
+        <td>Quando o turno de um aliado começa, Qingque compra aleatoriamente 1 peça de 3 naipes diferentes e pode conter até 4 peças ao mesmo tempo.
             Se Qingque começar seu turno com 4 peças do mesmo naipe, ela consumirá todas as peças para entrar no estado "Mão Oculta".
             Enquanto estiver neste estado, Qingque não pode usar sua habilidade novamente. Ao mesmo tempo, o ATK de Qingque aumenta em 36%–90% e seu ATK básico "Coleita de flores" é aprimorado, tornando-se "Cherry on Top!" O estado "Mão escondida" termina depois de usar "Cereja no topo!".</td>
         <td>Melhorar</td>
@@ -300,10 +300,10 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Skill_Game_Solitaire.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Qingque/Skill_Game_Solitaire.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>jogo de paciência</td>
-        <td>Depois de usar a Técnica, Qingque compra 2 ladrilhos de jade quando a batalha começa.</td>
+        <td>Depois de usar a Técnica, Qingque compra 2 peças de jade quando a batalha começa.</td>
         <td>Melhorar</td>
         <td></td>
         <td></td>
@@ -323,41 +323,41 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Eidolons/Eidolon_Rise_Through_the_Tiles.webp" alt="Eidolon"></td>
-          <td>Subir Através dos Azulejos</td>
+          <td class="dark-background"><img src="../habilidades/Qingque/Eidolons/Eidolon_Rise_Through_the_Tiles.webp" alt="Eidolon"></td>
+          <td>Subir Através das Peças</td>
           <td>1</td>
           <td>Ultimate dá 10% mais DMG.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Eidolons/Eidolon_Sleep_on_the_Tiles.webp" alt="Eidolon"></td>
-          <td>Dormir Nos Azulejos</td>
+          <td class="dark-background"><img src="../habilidades/Qingque/Eidolons/Eidolon_Sleep_on_the_Tiles.webp" alt="Eidolon"></td>
+          <td>Dormir Nas Peças</td>
           <td>2</td>
           <td>Cada vez que Draw Tile é acionado, Qingque imediatamente regenera 1 Energia.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Eidolons/Eidolon_Read_Between_the_Tiles.webp" alt="Eidolon"></td>
-          <td>Leia Entre os Azulejos</td>
+          <td class="dark-background"><img src="../habilidades/Qingque/Eidolons/Eidolon_Read_Between_the_Tiles.webp" alt="Eidolon"></td>
+          <td>Leia Entre as Peças</td>
           <td>3</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Eidolons/Eidolon_Right_on_the_Tiles.webp" alt="Eidolon"></td>
-          <td>Bem nas Telhas</td>
+          <td class="dark-background"><img src="../habilidades/Qingque/Eidolons/Eidolon_Right_on_the_Tiles.webp" alt="Eidolon"></td>
+          <td>Bem nas Peças</td>
           <td>4</td>
           <td>Depois que a Habilidade desse personagem é usada, há uma chance fixa de 24% de ganhar Autarquia, que dura até o final do turno atual.
             Com Autarky, usando Basic ATK ou Enhanced Basic ATK imediatamente lança 1 ataque de acompanhamento no mesmo alvo, causando Quantum DMG igual a 100% do DMG do Basic ATK anterior (ou Enhanced Basic ATK).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Eidolons/Eidolon_Gambit_for_the_Tiles.webp" alt="Eidolon"></td>
-          <td>Aposte Pelos Azulejos</td>
+          <td class="dark-background"><img src="../habilidades/Qingque/Eidolons/Eidolon_Gambit_for_the_Tiles.webp" alt="Eidolon"></td>
+          <td>Aposte Pelas Peças</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Qingque/Eidolons/Eidolon_Prevail_Beyond_the_Tiles.webp" alt="Eidolon"></td>
-          <td>Prevaleça Além dos Azulejos</td>
+          <td class="dark-background"><img src="../habilidades/Qingque/Eidolons/Eidolon_Prevail_Beyond_the_Tiles.webp" alt="Eidolon"></td>
+          <td>Prevaleça Além das Peças</td>
           <td>6</td>
           <td>Recupera 1 ponto de habilidade após usar o ATK básico aprimorado.</td>
         </tr>
@@ -374,13 +374,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -392,15 +392,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
