--- a/Site_Honkai/personagens/sampo.html
+++ b/Site_Honkai/personagens/sampo.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Sampo_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Sampo_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -194,39 +194,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Storm_Eye.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -247,7 +247,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Skill_Dazzling_Blades.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Sampo/Skill_Dazzling_Blades.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Lâminas Deslumbrantes</td>
         <td>Causa Wind DMG igual a 50%–130% do ATK de Sampo a um único inimigo.</td>
@@ -256,7 +256,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Skill_Ricochet_Love.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Sampo/Skill_Ricochet_Love.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Amor Ricochete	</td>
         <td>Causa DMG de vento igual a 28%–70% do ATK de Sampo a um único inimigo e ainda causa DMG por 4 tempo(s) extra(s), com cada vez causando DMG de vento igual a 28%–70% do ATK de Sampo a um inimigo aleatório .</td>
@@ -266,7 +266,7 @@
             15 (Acertos Subseqüentes)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Skill_Surprise_Present.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Sampo/Skill_Surprise_Present.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Presente Surpresa</td>
         <td>Causa DMG do Vento igual a 96%–192% do ATK de Sampo a todos os inimigos, com 100% de chance base de aumentar o DoT dos alvos em 20%–35% por 2 turno(s).</td>
@@ -277,7 +277,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Skill_Windtorn_Dagger.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Sampo/Skill_Windtorn_Dagger.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Punhal Rasgado Pelo Vento</td>
         <td>Os ataques de Sampo têm 65% de chance base de infligir Wind Shear por 3 turno(s).
@@ -287,7 +287,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Skill_Shining_Bright.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Sampo/Skill_Shining_Bright.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Brilhando</td>
         <td>Depois que Sampo usa a Técnica, os inimigos em uma área definida são infligidos com Cegueira por 10 segundo(s). Inimigos cegos não podem detectar sua equipe.
@@ -311,39 +311,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Eidolons/Eidolon_Rising_Love.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sampo/Eidolons/Eidolon_Rising_Love.webp" alt="Eidolon"></td>
           <td>Amor Crescente</td>
           <td>1</td>
           <td>Ao usar Skill, causa DANO por 1 tempo(s) extra(s) a um inimigo aleatório.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Eidolons/Eidolon_Infectious_Enthusiasm.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sampo/Eidolons/Eidolon_Infectious_Enthusiasm.webp" alt="Eidolon"></td>
           <td>Entusiasmo Contagiante</td>
           <td>2</td>
           <td>Derrotar um inimigo com Wind Shear tem 100% de chance base de infligir todos os inimigos com 1 stack(s) de Wind Shear, equivalente ao Talent's Wind Shear.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Eidolons/Eidolon_Big_Money.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sampo/Eidolons/Eidolon_Big_Money.webp" alt="Eidolon"></td>
           <td>Muito Dinheiro!</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Eidolons/Eidolon_The_Deeper_the_Love_the_Stronger_the_Hate.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sampo/Eidolons/Eidolon_The_Deeper_the_Love_the_Stronger_the_Hate.webp" alt="Eidolon"></td>
           <td>Quanto mais profundo o amor, mais forte o ódio</td>
           <td>4</td>
           <td>Quando Skill atinge um inimigo com 5 ou mais stack(s) de Wind Shear, o inimigo recebe imediatamente 8% do atual Wind Shear DMG.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Eidolons/Eidolon_Huuuuge_Money.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sampo/Eidolons/Eidolon_Huuuuge_Money.webp" alt="Eidolon"></td>
           <td>Enorme Dinheiro!</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sampo/Eidolons/Eidolon_Increased_Spending.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sampo/Eidolons/Eidolon_Increased_Spending.webp" alt="Eidolon"></td>
           <td>Gastos Aumentados</td>
           <td>6</td>
           <td>O multiplicador de DMG Wind Shear do talento aumenta em 15%.</td>
@@ -361,13 +361,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -379,15 +379,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
