--- a/Site_Honkai/personagens/seele.html
+++ b/Site_Honkai/personagens/seele.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Seele_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Seele_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -192,39 +192,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">5</td>
+            <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">10</td>
+              <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">3</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">7</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">20</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">35</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -245,7 +245,7 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Skill_Thwack.webp" alt="Basic"></td>
+          <td class="dark-background"><img src="../habilidades/Seele/Skill_Thwack.webp" alt="Basic"></td>
           <td>ATK básico</td>
           <td>Paulada</td>
           <td>Causa Quantum DMG igual a 50%–130% do ATK da Seele para um único inimigo.</td>
@@ -254,7 +254,7 @@
           <td>30</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Skill_Sheathed_Blade.webp" alt="Skill"></td>
+          <td class="dark-background"><img src="../habilidades/Seele/Skill_Sheathed_Blade.webp" alt="Skill"></td>
           <td>Skill</td>
           <td>Lâmina Embainhada</td>
           <td>Aumenta o SPD da Seele em 25% por 2 turno(s) e causa Quantum DMG igual a 110%–275% do ATK da Seele a um único inimigo.</td>
@@ -263,7 +263,7 @@
           <td>60</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Skill_Butterfly_Flurry.webp" alt="Ult"></td>
+          <td class="dark-background"><img src="../habilidades/Seele/Skill_Butterfly_Flurry.webp" alt="Ult"></td>
           <td>Ultimate</td>
           <td>Borboleta Flurry</td>
           <td>Seele entra no estado buffed e causa Quantum DMG igual a 255%–510% de seu ATK para um único inimigo.</td>
@@ -274,7 +274,7 @@
           
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Skill_Resurgence.webp" alt="Talent"></td>
+          <td class="dark-background"><img src="../habilidades/Seele/Skill_Resurgence.webp" alt="Talent"></td>
           <td>Talento</td>
           <td>Ressurgimento</td>
           <td>Entra no estado buffed ao derrotar um inimigo com Basic ATK, Skill ou Ultimate, e recebe um turno extra . Enquanto estiver no estado buffado, o DMG dos ataques da Seele aumenta em 40%–100% por 1 turno(s).
@@ -284,7 +284,7 @@
           <td></td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Skill_Phantom_Illusion.webp" alt="Talent"></td>
+          <td class="dark-background"><img src="../habilidades/Seele/Skill_Phantom_Illusion.webp" alt="Talent"></td>
           <td>Técnica</td>
           <td>Ilusão Fantasma</td>
           <td>Depois de usar sua Técnica, Seele ganha Furtividade por 20 segundo(s). Enquanto Stealth está ativo, Seele não pode ser detectado por inimigos. E ao entrar na batalha atacando os inimigos, a Seele entrará imediatamente no estado polido.</td>
@@ -307,39 +307,39 @@
         </thead>
         <tbody>
           <tr>
-            <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Eidolons/Eidolon_Extirpating_Slash.webp" alt="Eidolon"></td>
+            <td class="dark-background"><img src="../habilidades/Seele/Eidolons/Eidolon_Extirpating_Slash.webp" alt="Eidolon"></td>
             <td>Barra Extirpadora</td>
             <td>1</td>
             <td>Ao lidar com DMG a um inimigo cuja porcentagem de HP é de 80% ou menos, a taxa CRIT aumenta em 15%.</td>
           </tr>
           <tr>
-            <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Eidolons/Eidolon_Dancing_Butterfly.webp" alt="Eidolon"></td>
+            <td class="dark-background"><img src="../habilidades/Seele/Eidolons/Eidolon_Dancing_Butterfly.webp" alt="Eidolon"></td>
             <td>Borboleta Dançante</td>
             <td>2</td>
             <td>O efeito SPD Boost da habilidade de Seele pode acumular até 2 vez(es).</td>
           </tr>
           <tr>
-            <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Eidolons/Eidolon_Dazzling_Tumult.webp" alt="Eidolon"></td>
+            <td class="dark-background"><img src="../habilidades/Seele/Eidolons/Eidolon_Dazzling_Tumult.webp" alt="Eidolon"></td>
             <td>Deslumbrante Tumulto</td>
             <td>3</td>
             <td>Habilidade Nv. +2, até um máximo de Lv. 15.
                 Talento Nv. +2, até um máximo de Lv. 15.</td>
           </tr>
           <tr>
-            <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Eidolons/Eidolon_Flitting_Phantasm.webp" alt="Eidolon"></td>
+            <td class="dark-background"><img src="../habilidades/Seele/Eidolons/Eidolon_Flitting_Phantasm.webp" alt="Eidolon"></td>
             <td>Fantasma Esvoaçante</td>
             <td>4</td>
             <td>Seele regenera 15 de energia quando derrota um inimigo.</td>
           </tr>
           <tr>
-            <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Eidolons/Eidolon_Piercing_Shards.webp" alt="Eidolon"></td>
+            <td class="dark-background"><img src="../habilidades/Seele/Eidolons/Eidolon_Piercing_Shards.webp" alt="Eidolon"></td>
             <td>Estilhaços Perfurantes</td>
             <td>5</td>
             <td>Nível final +2, até um máximo de Lv. 15.
                 ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
           </tr>
           <tr>
-            <td class="dark-background"><img src="/Site_Honkai/habilidades/Seele/Eidolons/Eidolon_Shattering_Shambles.webp" alt="Eidolon"></td>
+            <td class="dark-background"><img src="../habilidades/Seele/Eidolons/Eidolon_Shattering_Shambles.webp" alt="Eidolon"></td>
             <td>Desordem Destruidora</td>
             <td>6</td>
             <td>Após Seele usar seu Ultimate, inflija o alvo inimigo com Butterfly Flurry por 1 turno(s). Inimigos que sofrem de Butterfly Flurry receberão Quantum DMG adicional igual a 15% do Ultimate DMG da Seele toda vez que forem atacados. Se o inimigo alvo for derrotado pelo Butterfly Flurry DMG desencadeado por ataques de outros aliados, o talento de Seele não será acionado.
@@ -358,13 +358,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -376,15 +376,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
