--- a/Site_Honkai/personagens/serval.html
+++ b/Site_Honkai/personagens/serval.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Serval_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Serval_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -195,39 +195,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">4</td>
+            <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">8</td>
+              <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -248,7 +248,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Skill_Roaring_Thunderclap.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Serval/Skill_Roaring_Thunderclap.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Trovão Estrondoso</td>
         <td>Causa Lightning DMG igual a 50%–130% do ATK de Serval para um único inimigo.</td>
@@ -257,7 +257,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Skill_Lightning_Flash.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Serval/Skill_Lightning_Flash.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Relâmpago</td>
         <td>Causa Lightning DMG igual a 70%–175% do ATK de Serval para um único inimigo e Lightning DMG igual a 30%–75% do ATK de Serval para inimigos adjacentes a ele, com uma chance base de 80% para os inimigos atingidos ficarem eletrocutados por 2 turno(s). <br>
@@ -268,7 +268,7 @@
             30 (Adjacente)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Skill_Here_Comes_the_Mechanical_Fever.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Serval/Skill_Here_Comes_the_Mechanical_Fever.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Aí vem a febre mecânica</td>
         <td>Causa Lightning DMG igual a 108%–216% do ATK de Serval para todos os inimigos. Inimigos já eletrocutados estenderão a duração de seu estado de choque em 2 turno(s).</td>
@@ -279,7 +279,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Skill_Galvanic_Chords.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Serval/Skill_Galvanic_Chords.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Cordas Galvânicas</td>
         <td>Após os ataques de Serval, trata DMG de Relâmpago Adicional igual a 36%–90% do ATK de Serval a todos os inimigos Eletrizados.</td>
@@ -288,7 +288,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Skill_Good_Night_Belobog.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Serval/Skill_Good_Night_Belobog.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Boa noite, Belobog</td>
         <td>Imediatamente ataca o inimigo. Depois de entrar na batalha, causa Lightning DMG igual a 50% do ATK de Serval a um inimigo aleatório, com uma chance base de 100% para todos os inimigos ficarem eletrocutados por 3 turno(s).
@@ -312,39 +312,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Eidolons/Eidolon_Echo_Chamber.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Serval/Eidolons/Eidolon_Echo_Chamber.webp" alt="Eidolon"></td>
           <td>Câmara de eco</td>
           <td>1</td>
           <td>O ATK Básico causa DMG de Relâmpago igual a 60% do DMG do ATK Básico a um inimigo aleatório adjacente ao alvo do ATK Básico.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Eidolons/Eidolon_Encore.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Serval/Eidolons/Eidolon_Encore.webp" alt="Eidolon"></td>
           <td>De novo!</td>
           <td>2</td>
           <td>Toda vez que o Talento de Serval é acionado para causar DANO Adicional, ela regenera 4 de Energia.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Eidolons/Eidolon_Listen_the_Heartbeat_of_the_Gears.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Serval/Eidolons/Eidolon_Listen_the_Heartbeat_of_the_Gears.webp" alt="Eidolon"></td>
           <td>Ouça, o batimento cardíaco das engrenagens</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Eidolons/Eidolon_Make_Some_Noise.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Serval/Eidolons/Eidolon_Make_Some_Noise.webp" alt="Eidolon"></td>
           <td>Faça algum Barulho!</td>
           <td>4</td>
           <td>Ultimate tem 100% de chance base de aplicar Choque a qualquer inimigo que não esteja com Eletrização no momento. Este Choque tem os mesmos efeitos do aplicado por Skill.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Eidolons/Eidolon_Belobog.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Serval/Eidolons/Eidolon_Belobog.webp" alt="Eidolon"></td>
           <td>O rugido mais alto de Belobog!</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Serval/Eidolons/Eidolon_This_Song_Rocks_to_Heaven.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Serval/Eidolons/Eidolon_This_Song_Rocks_to_Heaven.webp" alt="Eidolon"></td>
           <td>Esta música balança para o céu!</td>
           <td>6</td>
           <td>Serval causa 30% a mais de DMG em inimigos com choque.</td>
@@ -362,13 +362,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -380,15 +380,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Knowledge.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Key_of_Wisdom.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Inspiration.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Knowledge.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Key_of_Wisdom.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
