--- a/Site_Honkai/personagens/silverwolf.html
+++ b/Site_Honkai/personagens/silverwolf.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Silver_Wolf_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Silver_Wolf_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -193,39 +193,39 @@
           <tbody>
             <tr>
               <td>0 → 1 ✦</td>
-              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+              <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">5</td>
             </tr>
             <tr>
               <td>1 → 2 ✦</td>
-              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+              <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
                 <td></td>
-                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">10</td>
+                <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">10</td>
             </tr>
             <tr>
               <td>2 → 3 ✦</td>
-              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">3</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">6</td>
+              <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+                <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">3</td>
+                <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">6</td>
             </tr>
             <tr>
               <td>3 → 4 ✦</td>
-              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">7</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">9</td>
+              <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+                <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">7</td>
+                <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">9</td>
             </tr>
             <tr>
               <td>4 → 5 ✦</td>
-              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">20</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">6</td>
+              <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+                <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">20</td>
+                <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">6</td>
             </tr>
             <tr>
               <td>5 → 6 ✦</td>
-              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">35</td>
-                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">9</td>
+              <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+                <td><img src="../Materiais/Item_Void_Cast_Iron.webp" alt="Material A">35</td>
+                <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">9</td>
             </tr>
           </tbody>
         </table>
@@ -246,7 +246,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_System_Warning.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Silver Wolf/Skill_System_Warning.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Aviso do sistema</td>
         <td>Causa 50% do ATK de Silver Wolf como Quantum DMG a um inimigo alvo. com uma chance base de 65% de infligir um bug aleatório por 3 turno(s).</td>
@@ -255,7 +255,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_Allow_Changes.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Silver Wolf/Skill_Allow_Changes.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Permitir alterações?</td>
         <td>Causa 70% do ATK do Silver Wolf como Quantum DMG a um inimigo alvo. com uma chance base de 75% de impor a Fraqueza do Tipo de um aliado aleatório no alvo por 3 turno(s) e reduzir o DMG RES do alvo para esse Tipo de Fraqueza em 20%.</td>
@@ -264,7 +264,7 @@
         <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_User_Banned.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Silver Wolf/Skill_User_Banned.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Usuário banido</td>
         <td>Causa 180% do ATK do Silver Wolf como Quantum DMG a um inimigo alvo. Há uma chance básica de 100% de causar Emaranhamento. Para cada debuff infligido ao inimigo, causa um adicional de 18% do ATK do Silver Wolf como Quantum DMG ao inimigo, até 5 vezes. Quando Entangled, a ação do inimigo é atrasada em 40% e no início do próximo turno, o inimigo recebe Quantum DoT igual a 48"% do ATK do Silver Wolf.</td>
@@ -275,7 +275,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_Awaiting_System_Response....webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Silver Wolf/Skill_Awaiting_System_Response....webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Aguardando resposta do sistema...</td>
         <td>Causa emaranhamento e coloca bug no inimigo</td>
@@ -284,7 +284,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_Force_Quit_Program.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Silver Wolf/Skill_Force_Quit_Program.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Forçar Encerramento do Programa</td>
         <td>Imediatamente ataca o inimigo. Após entrar na batalha, ignora os Tipos de Fraqueza e esgota a Resistência de todos os inimigos. Se a Fraqueza de um alvo for Quebrada. Eles se tornarão Emaranhados.</td>
@@ -307,37 +307,37 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Social_Engineering.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Silver Wolf/Eidolons/Eidolon_Social_Engineering.webp" alt="Eidolon"></td>
           <td>Engenharia Social</td>
           <td>1</td>
           <td>A duração do bug é estendida por 1 turno(s). Sempre que a Fraqueza de um inimigo é Quebrada. Silver Wolf tem 65% de chance base de infligir um bug aleatório no alvo.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Zombie_Network.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Silver Wolf/Eidolons/Eidolon_Zombie_Network.webp" alt="Eidolon"></td>
           <td>Rede Zumbi</td>
           <td>2</td>
           <td>Quando um inimigo entra em batalha, reduz seu RES de Efeito em 30% por 2 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Payload.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Silver Wolf/Eidolons/Eidolon_Payload.webp" alt="Eidolon"></td>
           <td>Carga Útil</td>
           <td>3</td>
           <td>Nível final +3 até um máximo de Lv. 15. ATK Básico Lv. + 1, até um máximo de Nv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Bounce_Attack.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Silver Wolf/Eidolons/Eidolon_Bounce_Attack.webp" alt="Eidolon"></td>
           <td>Ataque de Salto</td>
           <td>4</td>
           <td>Ao usar o Ultimate, para cada debuff que o inimigo alvo possui, Silver Wolf regenera 8 de energia, até 5 vez(es).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Brute_Force_Attack.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Silver Wolf/Eidolons/Eidolon_Brute_Force_Attack.webp" alt="Eidolon"></td>
           <td>Ataque de Força Bruta</td>
           <td>5</td>
           <td>Habilidade Lv, +3 até um máximo de Lv. 15. ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Overlay_Network.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Silver Wolf/Eidolons/Eidolon_Overlay_Network.webp" alt="Eidolon"></td>
           <td>Acesso Concedido</td>
           <td>6</td>
           <td>A duração das Fraquezas implantadas nos inimigos por habilidade não tem limite de turno.</td>
@@ -355,13 +355,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -373,15 +373,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
