--- a/Site_Honkai/personagens/sushang.html
+++ b/Site_Honkai/personagens/sushang.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Sushang_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Sushang_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -196,39 +196,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Artifexs_Module.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Artifexs_Module.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Artifexs_Module.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Artifexs_Module.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Artifexs_Cogwheel.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Artifexs_Cogwheel.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Artifexs_Cogwheel.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Artifexs_Cogwheel.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Artifexs_Gyreheart.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Artifexs_Gyreheart.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Artifexs_Gyreheart.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Artifexs_Gyreheart.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -249,7 +249,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Skill_Cloudfencer_Art_Starshine.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Sushang/Skill_Cloudfencer_Art_Starshine.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Arte Cloudfencer: Starshine</td>
         <td>Causa DANO Físico igual a 50%–130% do ATK de Sushang a um único inimigo.</td>
@@ -258,7 +258,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Skill_Cloudfencer_Art_Mountainfall.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Sushang/Skill_Cloudfencer_Art_Mountainfall.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Arte Cloudfencer: Montanha</td>
         <td>Causa DANO Físico igual a 105%–262,5 do ATK de Sushang a um único inimigo. Além disso, há 33% de chance de ativar a Postura da Espada no golpe final, causando DANO Físico Adicional igual a 50%–125% do ATK de Sushang ao inimigo.
@@ -268,7 +268,7 @@
         <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Skill_Shape_of_Taixu_Dawn_Herald.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Sushang/Skill_Shape_of_Taixu_Dawn_Herald.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Forma de Taixu: Dawn Herald</td>
         <td>Causa DANO Físico igual a 192%–384% do ATK de Sushang a um único inimigo e imediatamente avança sua ação em 100%. Além disso, o ATK de Sushang aumenta em 18%–36% e usar sua Habilidade tem 2 chances extras de ativar a Postura da Espada por 2 turno(s).
@@ -280,7 +280,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Skill_Dancing_Blade.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Sushang/Skill_Dancing_Blade.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Lâmina Dançante</td>
         <td>Quando um inimigo tem sua fraqueza quebrada no campo, o SPD de Sushang aumenta em 15%–22,5% por 2 turno(s).</td>
@@ -289,7 +289,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Skill_Cloudfencer_Art_Warcry.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Sushang/Skill_Cloudfencer_Art_Warcry.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Arte Cloudfencer: Warcry</td>
         <td>Imediatamente ataca o inimigo. Ao entrar na batalha, Sushang causa dano físico igual a 80% de seu ATK a todos os inimigos.</td>
@@ -312,39 +312,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Eidolons/Eidolon_Cut_With_Ease.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sushang/Eidolons/Eidolon_Cut_With_Ease.webp" alt="Eidolon"></td>
           <td>Corte com facilidade</td>
           <td>1</td>
           <td>Depois de usar a habilidade contra um inimigo quebrado por fraqueza, regenera 1 ponto de habilidade.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Eidolons/Eidolon_Refine_in_Toil.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sushang/Eidolons/Eidolon_Refine_in_Toil.webp" alt="Eidolon"></td>
           <td>Refinar na labuta</td>
           <td>2</td>
           <td>Depois de ativar a Postura da Espada, o DMG recebido por Sushang é reduzido em 20% por 1 turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Eidolons/Eidolon_Rise_From_Fame.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sushang/Eidolons/Eidolon_Rise_From_Fame.webp" alt="Eidolon"></td>
           <td>Ascensão da Fama</td>
           <td>3</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Eidolons/Eidolon_Cleave_With_Heart.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sushang/Eidolons/Eidolon_Cleave_With_Heart.webp" alt="Eidolon"></td>
           <td>Partir com coração</td>
           <td>4</td>
           <td>O efeito de quebra de Sushang aumenta em 40%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Eidolons/Eidolon_Prevail_via_Taixu.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sushang/Eidolons/Eidolon_Prevail_via_Taixu.webp" alt="Eidolon"></td>
           <td>Prevaleça via Taixu</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Sushang/Eidolons/Eidolon_Dwell_Like_Water.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Sushang/Eidolons/Eidolon_Dwell_Like_Water.webp" alt="Eidolon"></td>
           <td>Habite como a água</td>
           <td>6</td>
           <td>O SPD Boost do Talent é acumulável e pode acumular até 2 vezes. Além disso, depois de entrar na batalha, Sushang imediatamente ganha 1 pilha de SPD Boost de seu talento.</td>
@@ -362,13 +362,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Artifexs_Module.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Artifexs_Cogwheel.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Artifexs_Gyreheart.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Artifexs_Module.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Artifexs_Cogwheel.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Artifexs_Gyreheart.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -380,15 +380,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Artifexs_Module.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Artifexs_Cogwheel.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Artifexs_Gyreheart.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Artifexs_Module.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Artifexs_Cogwheel.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Artifexs_Gyreheart.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
