--- a/Site_Honkai/personagens/tingyun.html
+++ b/Site_Honkai/personagens/tingyun.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Tingyun_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Tingyun_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -194,39 +194,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -247,7 +247,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Skill_Dislodged.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Tingyun/Skill_Dislodged.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Desalojado</td>
         <td>Tingyun causa Lightning DMG igual a 50%–130% de seu ATK para um único inimigo.
@@ -257,7 +257,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Skill_Soothing_Melody.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Tingyun/Skill_Soothing_Melody.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Melodia Calmante</td>
         <td>Concede a um único aliado com Benediction aumentar seu ATK em 25%–62,5% , até 15%–30% do ATK atual de Tingyun.
@@ -268,7 +268,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Skill_Amidst_the_Rejoicing_Clouds.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Tingyun/Skill_Amidst_the_Rejoicing_Clouds.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Entre as nuvens alegres</td>
         <td>Regenera 50 de energia para um único aliado e aumenta o DMG do alvo em 20%–65% por 2 turno(s).</td>
@@ -279,7 +279,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Skill_Violet_Sparknado.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Tingyun/Skill_Violet_Sparknado.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Violeta Sparknado</td>
         <td>Quando um inimigo é atacado por Tingyun, o aliado com Benediction imediatamente causa DMG de Relâmpago Adicional igual a 30%–75% do ATK desse aliado ao mesmo inimigo.</td>
@@ -288,7 +288,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Skill_Gentle_Breeze.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Tingyun/Skill_Gentle_Breeze.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Brisa suave</td>
         <td>Tingyun imediatamente regenera 50 de energia ao usar sua técnica.</td>
@@ -311,39 +311,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Eidolons/Eidolon_Windfall_of_Lucky_Springs.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Tingyun/Eidolons/Eidolon_Windfall_of_Lucky_Springs.webp" alt="Eidolon"></td>
           <td>Sorte inesperada de Lucky Springs</td>
           <td>1</td>
           <td>Depois de usar seu Ultimate, o aliado com Benediction ganha um aumento de 12% no SPD por 1 turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Eidolons/Eidolon_Gainfully_Gives_Givingly_Gains.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Tingyun/Eidolons/Eidolon_Gainfully_Gives_Givingly_Gains.webp" alt="Eidolon"></td>
           <td>Dá generosamente, ganha generosamente</td>
           <td>2</td>
           <td>O aliado com Benediction regenera 5 Energias após derrotar um inimigo. Este efeito só pode ser ativado uma vez por turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Eidolons/Eidolon_Halcyon_Bequest.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Tingyun/Eidolons/Eidolon_Halcyon_Bequest.webp" alt="Eidolon"></td>
           <td>Legado Halcyon</td>
           <td>3</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Eidolons/Eidolon_Jovial_Versatility.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Tingyun/Eidolons/Eidolon_Jovial_Versatility.webp" alt="Eidolon"></td>
           <td>Versatilidade Jovial</td>
           <td>4</td>
           <td>O multiplicador DMG fornecido por Benediction aumenta em 20%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Eidolons/Eidolon_Sauntering_Coquette.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Tingyun/Eidolons/Eidolon_Sauntering_Coquette.webp" alt="Eidolon"></td>
           <td>Coquete passeando</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Tingyun/Eidolons/Eidolon_Peace_Brings_Wealth_to_All.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Tingyun/Eidolons/Eidolon_Peace_Brings_Wealth_to_All.webp" alt="Eidolon"></td>
           <td>A paz traz riqueza para todos</td>
           <td>6</td>
           <td>Ultimate regenera 10 a mais de energia para o aliado alvo.</td>
@@ -361,13 +361,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Ancestral_Hymn.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Stellaris_Symphony.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -379,15 +379,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Scionette.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Scionette.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Aeroblossom.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Immortal_Lumintwig.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Itens/Item_Ancestral_Hymn.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Itens/Item_Stellaris_Symphony.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
