--- a/Site_Honkai/personagens/welt.html
+++ b/Site_Honkai/personagens/welt.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Welt_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Welt_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -199,39 +199,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">5</td>
+            <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">10</td>
+              <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">3</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">7</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">20</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Golden_Crown_of_the_Past_Shadow.webp" alt="Material A">35</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -252,7 +252,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Skill_Gravity_Suppression.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Welt/Skill_Gravity_Suppression.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Supressão de gravidade</td>
         <td>Causa DANO imaginário igual a 50%–130% do ATK de Welt a um único inimigo.</td>
@@ -261,7 +261,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Skill_Edge_of_the_Void.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Welt/Skill_Edge_of_the_Void.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Borda do Vazio</td>
         <td>Causa DMG imaginário igual a 36%–90% do ATK de Welt a um único inimigo e ainda causa DMG 2 vezes extras, com cada vez causando DMG imaginário igual a 36%–90% do ATK de Welt a um inimigo aleatório. Ao acertar, há uma chance básica de 65%–80% de reduzir o SPD do inimigo em 10% por 2 turno(s).</td>
@@ -270,7 +270,7 @@
         <td>30 (por acerto)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Skill_Synthetic_Black_Hole.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Welt/Skill_Synthetic_Black_Hole.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Buraco Negro Sintético</td>
         <td>Causa dano imaginário igual a 90%–180% do ATK de Welt a todos os inimigos, com uma chance base de 100% para os inimigos atingidos por esta habilidade serem aprisionados por 1 turno.
@@ -282,7 +282,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Skill_Time_Distortion.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Welt/Skill_Time_Distortion.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Distorção de tempo</td>
         <td>Ao atingir um inimigo que já está desacelerado, Welt causa DMG imaginário adicional igual a 30% a 75% de seu ATK ao inimigo</td>
@@ -291,7 +291,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Skill_Gravitational_Imprisonment.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Welt/Skill_Gravitational_Imprisonment.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Aprisionamento Gravitacional</td>
         <td>Depois de usar a técnica de Welt, crie uma dimensão que dura 15 segundo(s). Inimigos nesta dimensão têm seu movimento SPD reduzido em 50%. Depois de entrar em batalha com inimigos na dimensão, há 100% de chance base de aprisionar os inimigos por 1 turno.
@@ -315,39 +315,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Eidolons/Eidolon_Legacy_of_Honor.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Welt/Eidolons/Eidolon_Legacy_of_Honor.webp" alt="Eidolon"></td>
           <td>Legado de Honra</td>
           <td>1</td>
           <td>Depois que Welt usa seu Ultimate, suas habilidades são aprimoradas. Na(s) próxima(s) 2 vez(es) que ele usar seu ATK Básico ou Habilidade, causa DANO Adicional ao alvo igual a 50% do multiplicador de DMG de seu ATK Básico ou 80% do multiplicador de DMG de sua Habilidade, respectivamente.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Eidolons/Eidolon_Conflux_of_Stars.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Welt/Eidolons/Eidolon_Conflux_of_Stars.webp" alt="Eidolon"></td>
           <td>Confluxo de Estrelas</td>
           <td>2</td>
           <td>Quando seu talento é acionado, Welt regenera 3 de energia.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Eidolons/Eidolon_Prayer_of_Peace.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Welt/Eidolons/Eidolon_Prayer_of_Peace.webp" alt="Eidolon"></td>
           <td>Oração da Paz</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Eidolons/Eidolon_Appellation_of_Justice.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Welt/Eidolons/Eidolon_Appellation_of_Justice.webp" alt="Eidolon"></td>
           <td>Denominação de Justiça</td>
           <td>4</td>
           <td>A chance base da habilidade infligir redução de SPD aumenta em 35%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Eidolons/Eidolon_Power_of_Kindness.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Welt/Eidolons/Eidolon_Power_of_Kindness.webp" alt="Eidolon"></td>
           <td>Poder da Bondade</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Welt/Eidolons/Eidolon_Prospect_of_Glory.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Welt/Eidolons/Eidolon_Prospect_of_Glory.webp" alt="Eidolon"></td>
           <td>Perspectiva da Glória</td>
           <td>6</td>
           <td>Ao usar Skill, causa DMG por 1 vez extra a um inimigo aleatório.</td>
@@ -365,13 +365,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -383,15 +383,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
