--- a/Site_Honkai/personagens/yanqing.html
+++ b/Site_Honkai/personagens/yanqing.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Yanqing_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Yanqing_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -198,39 +198,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">5</td>
+            <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Material A">10</td>
+              <td><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Gelid_Chitin.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Gelid_Chitin.webp" alt="Material A">3</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Gelid_Chitin.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Gelid_Chitin.webp" alt="Material A">7</td>
+              <td><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Gelid_Chitin.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Gelid_Chitin.webp" alt="Material A">20</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Gelid_Chitin.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Gelid_Chitin.webp" alt="Material A">35</td>
+              <td><img src="../Materiais/Item_Conquerors_Will.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -251,7 +251,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Skill_Frost_Thorn.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Yanqing/Skill_Frost_Thorn.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Espinho de Gelo</td>
         <td>Causa Ice DMG igual a 50%–130% do ATK de Yanqing a um único inimigo.</td>
@@ -260,7 +260,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Skill_Darting_Ironthorn.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Yanqing/Skill_Darting_Ironthorn.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Darting Ironthorn</td>
         <td>Causa Ice DMG igual a 110%–275% do ATK de Yanqing a um único inimigo e ativa Soulsteel Sync por 1 turno.</td>
@@ -269,7 +269,7 @@
         <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Skill_Amidst_the_Raining_Bliss.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Yanqing/Skill_Amidst_the_Raining_Bliss.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Em Meio à Felicidade que Chove</td>
         <td>Aumenta a taxa CRIT de Yanqing em 60%. Quando o Soulsteel Sync está ativo, aumenta o CRIT DMG de Yanqing em 30% a 60% a mais . Este buff dura um turno. Depois, causa Ice DMG igual a 210%–420% do ATK de Yanqing a um único inimigo.</td>
@@ -281,7 +281,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Skill_One_With_the_Sword.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Yanqing/Skill_One_With_the_Sword.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Um Com a Espada</td>
         <td>Quando o Soulsteel Sync está ativo, é menos provável que Yanqing seja atacado por inimigos. A taxa CRIT de Yanqing aumenta de 15% a 22,5% e seu CRIT DMG aumenta de 15% a 37,5% . Depois que Yanqing ataca um inimigo, há uma chance fixa de 50% a 65% de realizar um ataque de acompanhamento , causando Ice DMG igual a 25% a 62,5% do ATK de Yanqing ao inimigo, que tem 65% de chance base de congelar o inimigo por 1 turno. O alvo Congelado não pode agir e recebe DMG de Gelo Adicional igual a 25%–62,5% do ATK de Yanqing no início de cada turno. Quando Yanqing receber DMG, o efeito Soulsteel Sync desaparecerá.</td>
@@ -290,7 +290,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Skill_The_One_True_Sword.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Yanqing/Skill_The_One_True_Sword.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>A Única Espada Verdadeira</td>
         <td>Depois de usar sua técnica, no início da próxima batalha, Yanqing causa 30% a mais de DMG por 2 turno(s) a inimigos cujo HP atual é de 50% ou mais.</td>
@@ -313,39 +313,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Eidolons/Eidolon_Svelte_Saber.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Yanqing/Eidolons/Eidolon_Svelte_Saber.webp" alt="Eidolon"></td>
           <td>Svelte Sabre</td>
           <td>1</td>
           <td>Quando Yanqing ataca um inimigo Congelado, ele causa DMG de Gelo Adicional igual a 60% de seu ATK.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Eidolons/Eidolon_Supine_Serenade.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Yanqing/Eidolons/Eidolon_Supine_Serenade.webp" alt="Eidolon"></td>
           <td>Serenata Supina</td>
           <td>2</td>
           <td>Quando o Soulsteel Sync está ativo, a taxa de regeneração de energia aumenta em 10%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Eidolons/Eidolon_Sword_Savant.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Yanqing/Eidolons/Eidolon_Sword_Savant.webp" alt="Eidolon"></td>
           <td>Espada Savant</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Eidolons/Eidolon_Searing_Sting.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Yanqing/Eidolons/Eidolon_Searing_Sting.webp" alt="Eidolon"></td>
           <td>Picada Abrasadora</td>
           <td>4</td>
           <td>Quando a porcentagem de HP atual é de 80% ou superior, o Ice RES PEN aumenta em 12%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Eidolons/Eidolon_Surging_Strife.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Yanqing/Eidolons/Eidolon_Surging_Strife.webp" alt="Eidolon"></td>
           <td>Conflito Crescente</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Yanqing/Eidolons/Eidolon_Swift_Swoop.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Yanqing/Eidolons/Eidolon_Swift_Swoop.webp" alt="Eidolon"></td>
           <td>Swoop rápido</td>
           <td>6</td>
           <td>Se os buffs do Ultimate ainda estiverem em vigor quando um inimigo for derrotado, sua duração será estendida em 1 turno.</td>
@@ -363,13 +363,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -381,15 +381,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Thiefs_Instinct.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Usurpers_Scheme.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Thiefs_Instinct.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Materiais/Item_Usurpers_Scheme.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Materiais/Item_Conquerors_Will.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Beast_Hunter.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Demon_Slayer.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Arrow_of_the_Starchaser.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
