--- a/Site_Honkai/personagens/yukong.html
+++ b/Site_Honkai/personagens/yukong.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Yukong_Splash_Art (1).webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Yukong_Splash_Art (1).webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
