--- a/Site_Honkai/locais/xianzhou.html
+++ b/Site_Honkai/locais/xianzhou.html
@@ -30,31 +30,31 @@
         
         Embora a guerra tenha diminuído, o Luofu não relaxou sua vigilância contra os Habitantes da Abundância. Os starskiffs dos Cloud Knights iriam para planetas que perderam contato para buscar informações, enquanto a Xianzhou Ten-Lords Commission permanece de guarda para qualquer Elixir Seeker em busca da vida eterna - O desejo pela imortalidade é o começo de todas as tragédias. O Xianzhou não permitirá que nenhuma civilização mais jovem siga seu antigo caminho.
     </p>
-          <div class="description">
-                                    <ul>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
-                                        </li>
-                                    </ul>
-                                </div>
-        </div>
-    </body>
-    </html>
+    <div class="description">
+        <ul>
+            <li>
+                <a href="../site.html#sobre" style="color: #ad861b;">Sobre</a>
+            </li>
+            <li>
+                <a href="../site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+            </li>
+            <li>
+                <a href="../site.html#progressao"style="color: #ad861b;">Progressão</a>
+            </li>
+            <li>
+                <a href="../site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+            </li>
+            <li>
+                <a href="../site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+            </li>
+            <li>
+                <a href="../site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+            </li>
+            <li>
+                <a href="../site.html#contato"style="color: #ad861b;">Contato</a>
+            </li>
+        </ul>
+    </div>
+</div>
+</body>
+</html>
