--- a/Site_Honkai/personagens/gepard.html
+++ b/Site_Honkai/personagens/gepard.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Gepard_Splash_Art (1).webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Gepard_Splash_Art (1).webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -197,39 +197,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
             <td></td>
-            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">5</td>
+            <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
               <td></td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">10</td>
+              <td><img src="../Itens/Item_Silvermane_Badge.webp" alt="Material A">10</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">3</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">7</td>
+              <td><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Material A">9</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">20</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">6</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">35</td>
+              <td><img src="../Itens/Item_Silvermane_Medal.webp" alt="Material A">9</td>
           </tr>
         </tbody>
       </table>
@@ -250,7 +250,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Skill_Fist_of_Conviction.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Gepard/Skill_Fist_of_Conviction.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Punho de Convicção</td>
         <td>Causa Ice DMG igual a 50%–130% do ATK de Gepard para um único inimigo.</td>
@@ -259,7 +259,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Skill_Daunting_Smite.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Gepard/Skill_Daunting_Smite.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Punição Assustadora</td>
         <td>Causa DMG de Gelo igual a 100%–250% do ATK de Gepard a um único inimigo, com 65% de chance base de Congelar o inimigo por 1 turno(s).
@@ -269,7 +269,7 @@
         <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Skill_Enduring_Bulwark.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Gepard/Skill_Enduring_Bulwark.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Baluarte Duradouro</td>
         <td>Aplica um Escudo a todos os aliados, absorvendo DANO igual a 30%–52,5% da DEF de Gepard mais 150–768,75 por 3 turno(s).</td>
@@ -280,7 +280,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Skill_Unyielding_Will.webp (1).webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Gepard/Skill_Unyielding_Will.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Vontade Inflexível</td>
         <td>Quando atingido por um golpe mortal, em vez de ser derrubado , o HP de Gepard restaura imediatamente para 25% a 62,5% de seu HP máximo. Este efeito só pode ser ativado uma vez por batalha.</td>
@@ -289,7 +289,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Skill_Comradery.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Gepard/Skill_Comradery.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Camaradagem</td>
         <td>Após Gepard usar sua Técnica, quando a próxima batalha começar, um Escudo será aplicado a todos os aliados, absorvendo DMG igual a 24% da DEF de Gepard mais 150 por 2 turno(s).</td>
@@ -312,39 +312,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Eidolons/Eidolon_Due_Diligence.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Gepard/Eidolons/Eidolon_Due_Diligence.webp" alt="Eidolon"></td>
           <td>Due diligence</td>
           <td>1</td>
           <td>Ao usar Skill, aumenta a chance base de Congelar inimigos em 35%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Eidolons/Eidolon_Lingering_Cold.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Gepard/Eidolons/Eidolon_Lingering_Cold.webp" alt="Eidolon"></td>
           <td>Frio persistente</td>
           <td>2</td>
           <td>Depois que um inimigo Frozen by Skill é descongelado, seu SPD é reduzido em 20% por 1 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Eidolons/Eidolon_Never_Surrender.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Gepard/Eidolons/Eidolon_Never_Surrender.webp" alt="Eidolon"></td>
           <td>Nunca se render</td>
           <td>3</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Eidolons/Eidolon_Faith_Moves_Mountains.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Gepard/Eidolons/Eidolon_Faith_Moves_Mountains.webp" alt="Eidolon"></td>
           <td>A Fé Move Montanhas</td>
           <td>4</td>
           <td>Quando Gepard está em batalha, o Effect RES de todos os aliados aumenta em 20%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Eidolons/Eidolon_Cold_Iron_Fist.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Gepard/Eidolons/Eidolon_Cold_Iron_Fist.webp" alt="Eidolon"></td>
           <td>Punho de Ferro Frio</td>
           <td>5</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Gepard/Eidolons/Eidolon_Unyielding_Resolve.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Gepard/Eidolons/Eidolon_Unyielding_Resolve.webp" alt="Eidolon"></td>
           <td>Determinação Inabalável</td>
           <td>6</td>
           <td>Quando seu Talento é acionado, a ação de Gepard é Avançar em 100% e ele restaura HP extra igual a 50% de seu HP máximo.</td>
@@ -362,13 +362,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Oath_of_Steel.webp" alt="Custo">8</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">11</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Oath_of_Steel.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -380,15 +380,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">9</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">13</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Oath_of_Steel.webp" alt="Custo">15</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">30</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">652.500</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Badge.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Insignia.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="../Itens/Item_Silvermane_Medal.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="../Materiais/Item_Endurance_of_Bronze.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Materiais/Item_Oath_of_Steel.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="../Materiais/Item_Safeguard_of_Amber.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">2</td>
         </tr>
       </tbody>
     </table>
