--- a/Site_Honkai/personagens/natasha.html
+++ b/Site_Honkai/personagens/natasha.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Natasha_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Natasha_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -194,39 +194,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Ancient_Part.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Broken_Teeth_of_Iron_Wolf.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Ancient_Engine.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -247,7 +247,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Skill_Behind_the_Kindness.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Natasha/Skill_Behind_the_Kindness.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Atrás da Bondade</td>
         <td>Causa DANO Físico igual a 50%–130% do ATK de Natasha a um único inimigo.</td>
@@ -256,7 +256,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Skill_Love_and_Choose.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Natasha/Skill_Love_and_Choose.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Ame, Cure e Escolha</td>
         <td>Restaura um único aliado por 7%–12,25% do HP máximo de Natasha mais 70–358,75 . Restaura o aliado por mais 4,8%–8,4% do HP máximo de Natasha mais 48–246 no início de cada turno por 2 turno(s).</td>
@@ -265,7 +265,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Skill_Gift_of_Rebirth.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Natasha/Skill_Gift_of_Rebirth.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Presente de Renascimento</td>
         <td>
@@ -277,7 +277,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Skill_Innervation.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Natasha/Skill_Innervation.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Inervação</td>
         <td>Ao curar aliados com porcentagem de HP de 30% ou menos, aumenta a cura de saída de Natasha em 25%–62,5% . Este efeito também funciona na cura contínua.</td>
@@ -286,7 +286,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Skill_Hypnosis_Research.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Natasha/Skill_Hypnosis_Research.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Pesquisa de Hipnose</td>
         <td>Imediatamente ataca o inimigo. Depois de entrar na batalha, causa DANO Físico igual a 80% do ATK de Natasha a um inimigo aleatório, com 100% de chance base de enfraquecer todos os inimigos.
@@ -310,39 +310,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Eidolons/Eidolon_Pharmacology_Expertise.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Natasha/Eidolons/Eidolon_Pharmacology_Expertise.webp" alt="Eidolon"></td>
           <td>Especialização em Farmacologia</td>
           <td>1</td>
           <td>Depois de ser atacado, se a porcentagem de HP atual for de 30% ou menos, cura a si mesmo 1 vez para restaurar o HP em uma quantidade igual a 15% do HP máximo mais 400. Este efeito só pode ser acionado 1 vez por batalha.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Eidolons/Eidolon_Clinical_Research.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Natasha/Eidolons/Eidolon_Clinical_Research.webp" alt="Eidolon"></td>
           <td>Pesquisa Clinica</td>
           <td>2</td>
           <td>Quando Natasha usar seu Ultimate, conceda cura contínua por 1 turno(s) a todos os aliados cujo HP esteja em 30% ou menos. E no início do turno, seu HP é restaurado em uma quantidade igual a 6% do HP máximo de Natasha mais 160.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Eidolons/Eidolon_The_Right_Cure.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Natasha/Eidolons/Eidolon_The_Right_Cure.webp" alt="Eidolon"></td>
           <td>A Cura Certa</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Eidolons/Eidolon_Miracle_Cure.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Natasha/Eidolons/Eidolon_Miracle_Cure.webp" alt="Eidolon"></td>
           <td>Cura Milagrosa</td>
           <td>4</td>
           <td>Após ser atacado, regenera 5 energias extras.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Eidolons/Eidolon_Preventive_Treatment.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Natasha/Eidolons/Eidolon_Preventive_Treatment.webp" alt="Eidolon"></td>
           <td>Tratamento preventivo</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Natasha/Eidolons/Eidolon_Doctor_Grace.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Natasha/Eidolons/Eidolon_Doctor_Grace.webp" alt="Eidolon"></td>
           <td>Graça do Médico</td>
           <td>6</td>
           <td>O ATK básico de Natasha causa DMG físico adicional igual a 40% de seu HP máximo.</td>
@@ -360,13 +360,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Seed_of_Abundance.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Sprout_of_Life.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Flower_of_Eternity.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Seed_of_Abundance.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Sprout_of_Life.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Flower_of_Eternity.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -378,15 +378,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Seed_of_Abundance.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Sprout_of_Life.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Flower_of_Eternity.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Spindle.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Ancient_Engine.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Seed_of_Abundance.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Sprout_of_Life.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Flower_of_Eternity.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
