--- a/Site_Honkai/personagens/pela.html
+++ b/Site_Honkai/personagens/pela.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Pela_Splash_Art.webp" alt="Imagem do Personagem">
+            <img class="character-image" src="../Art_splash/Character_Pela_Splash_Art.webp" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
@@ -194,39 +194,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
+            <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
+              <td><img src="../Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">2</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">2</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">5</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">5</td>
+              <td><img src="../Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">15</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">15</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Horn_of_Snow.webp" alt="Material A">28</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
+            <td class="cost-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="../Materiais/Item_Horn_of_Snow.webp" alt="Material A">28</td>
+              <td><img src="../Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -247,7 +247,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Skill_Frost_Shot.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="../habilidades/Pela/Skill_Frost_Shot.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Tiro de Gelo</td>
         <td>Causa Ice DMG igual a 50%–130% do ATK de Pela a um único inimigo.</td>
@@ -256,7 +256,7 @@
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Skill_Frostbite.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="../habilidades/Pela/Skill_Frostbite.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Queimadura por frio</td>
         <td>Remove 1 buff(s) e causa Ice DMG igual a 105%–262,5% do ATK de Pela em um único inimigo.</td>
@@ -265,7 +265,7 @@
         <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Skill_Zone_Suppression.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="../habilidades/Pela/Skill_Zone_Suppression.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>supressão de zona</td>
         <td>Causa Ice DMG igual a 60%–120 do ATK de Pela a todos os inimigos, com 100% de chance base de infligir Exposed em todos os inimigos.
@@ -277,7 +277,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Skill_Data_Collecting.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Pela/Skill_Data_Collecting.webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Coleta de Dados</td>
         <td>Se o inimigo for debilitado após o ataque de Pela, Pela restaurará 5–12,5 de energia extra. Este efeito só pode ser ativado 1 vez por ataque.</td>
@@ -286,7 +286,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Skill_Preemptive_Strike.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="../habilidades/Pela/Skill_Preemptive_Strike.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Ataque preventivo</td>
         <td>Imediatamente ataca o inimigo. Ao entrar na batalha, Pela causa Ice DMG igual a 80% de seu ATK a um inimigo aleatório, com 100% de chance base de diminuir a DEF de todos os inimigos em 20% por 2 turnos.</td>
@@ -309,39 +309,39 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Eidolons/Eidolon_Victory_Report.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Pela/Eidolons/Eidolon_Victory_Report.webp" alt="Eidolon"></td>
           <td>Relatório de vitória</td>
           <td>1</td>
           <td>Quando um inimigo é derrotado, Pela regenera 5 de Energia.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Eidolons/Eidolon_Adamant_Charge.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Pela/Eidolons/Eidolon_Adamant_Charge.webp" alt="Eidolon"></td>
           <td>Carga Inflexível</td>
           <td>2</td>
           <td>Usar Skill para remover buff(s) aumenta a SPD em 10% por 2 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Eidolons/Eidolon_Suppressive_Force.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Pela/Eidolons/Eidolon_Suppressive_Force.webp" alt="Eidolon"></td>
           <td>Força supressiva</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
             ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Eidolons/Eidolon_Full_Analysis.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Pela/Eidolons/Eidolon_Full_Analysis.webp" alt="Eidolon"></td>
           <td>Análise Completa</td>
           <td>4</td>
           <td>Ao usar Skill, há 100% de chance base de reduzir o RES de Gelo do inimigo alvo em 12% por 2 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Eidolons/Eidolon_Absolute_Jeopardy.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Pela/Eidolons/Eidolon_Absolute_Jeopardy.webp" alt="Eidolon"></td>
           <td>Perigo absoluto</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Pela/Eidolons/Eidolon_Feeble_Pursuit.webp" alt="Eidolon"></td>
+          <td class="dark-background"><img src="../habilidades/Pela/Eidolons/Eidolon_Feeble_Pursuit.webp" alt="Eidolon"></td>
           <td>Perseguição Fraca</td>
           <td>6</td>
           <td>Quando Pela ataca um inimigo com debuff, ela causa DMG de gelo adicional igual a 40% do ATK de Pela ao inimigo.</td>
@@ -359,13 +359,13 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -377,15 +377,15 @@
       </thead>
       <tbody>
         <tr>
-          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">23</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+          <td class="material-cell"><img src="../Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="../Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="../Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="../Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="../Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="../Materiais/Item_Guardians_Lament.webp (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="../Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
